--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 
-  .orcr0menumobil {
+  .nn6c1menumobil {
     display: none;
     cursor: pointer;
   }
 
-  .orcr0Children {
+  .nn6c1Children {
     display: flex;
     width: var(--max);
     gap: 15px;
     align-items: end;
   }
 
-  .orcr0 {
+  .nn6c1 {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -20,7 +20,7 @@
     background-color: #e9e9e9;
   }
 
-  .orcr0title {
+  .nn6c1title {
     width: 100%;
     background-color: #333;
     display: flex;
@@ -28,7 +28,7 @@
     justify-content: center;
   }
 
-  .orcr0titlebody {
+  .nn6c1titlebody {
     color: #fff;
     width: var(--max);
     display: flex;
@@ -36,31 +36,31 @@
     padding: 10px 0px 10px 0px;
   }
 
-  .orcr0titlebodytitle {
+  .nn6c1titlebodytitle {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: left;
   }
 
-  .orcr0titlebodylang {
+  .nn6c1titlebodylang {
     width: auto;
     margin: -5px 0px -5px 0px;
   }
 
-  .orcr0titlebodylang ul {
+  .nn6c1titlebodylang ul {
     display: flex;
     gap: 5px;
   }
 
-  .orcr0body {
+  .nn6c1body {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 5px 0px 5px 0px;
   }
 
-  .orcr0menulist {
+  .nn6c1menulist {
     display: block;
     background-color: #279c90;
     padding: 10px;
@@ -69,7 +69,7 @@
     width: 100%;
   }
 
-  .orcr0menubody {
+  .nn6c1menubody {
     width: 100%;
     background-color: #279c90;
     display: flex;
@@ -77,7 +77,7 @@
     justify-content: center;
   }
 
-  .orcr0menulist ul {
+  .nn6c1menulist ul {
     width: 100%;
     list-style-type: none;
     display: flex;
@@ -87,7 +87,7 @@
     overflow-x: auto;
   }
 
-  .orcr0menulist ul a {
+  .nn6c1menulist ul a {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -99,14 +99,14 @@
     white-space: nowrap;
   }
 
-  .orcr0menulist ul a:hover {
+  .nn6c1menulist ul a:hover {
     background-color: #e0e0e0;
     border-radius: 5px;
     color: #000;
     cursor: pointer;
   }
 
-  .orcr0menuitem {
+  .nn6c1menuitem {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -118,30 +118,30 @@
     white-space: nowrap;
   }
 
-  .orcr0menuactive {
+  .nn6c1menuactive {
     background-color: #e0e0e0 !important;
     border-radius: 5px;
     color: #000 !important;
     font-weight: bold;
   }
 
-  .orcr0bodylogo {
+  .nn6c1bodylogo {
     height: 100px;
     max-width: 90vw;
   }
 
   @media screen and (min-width: 1024px) {
-    .orcr0menumobil {
+    .nn6c1menumobil {
       display: none !important;
     }
 
-    .orcr0menulist {
+    .nn6c1menulist {
       display: flex !important;
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .orcr0menumobil {
+    .nn6c1menumobil {
       display: flex;
       align-items: center;
       justify-content: end;
@@ -149,22 +149,22 @@
       width: 100%;
     }
 
-    .orcr0menumobil div {
+    .nn6c1menumobil div {
       font-size: 32px;
       color: #fff;
       padding: 5px;
     }
 
-    .orcr0menulist {
+    .nn6c1menulist {
       display: none;
     }
 
-    .orcr0body {
+    .nn6c1body {
       flex-direction: column;
       gap: 20px;
     }
 
-    .orcr0Children {
+    .nn6c1Children {
       width: 100%;
       gap: 0px;
       flex-direction: column;
@@ -172,19 +172,19 @@
       justify-content: center;
     }
 
-    .orcr0menulist ul a {
+    .nn6c1menulist ul a {
       padding: 10px 0px 10px 0px;
     }
 
-    .orcr0menu {
+    .nn6c1menu {
       overflow-x: auto;
     }
 
-    .orcr0menulist ul {
+    .nn6c1menulist ul {
       flex-direction: column;
     }
 
-    .orcr0bodylogo {
+    .nn6c1bodylogo {
       max-height: 50vw;
       max-width: 50vw;
       max-height: 100px;
@@ -192,7 +192,7 @@
   }
 
   @media screen and (max-width: 768px) {
-    .orcr0menulist ul a {
+    .nn6c1menulist ul a {
       font-size: 14px;
     }
   }
@@ -247,18 +247,18 @@
   }
 
 
-  .axe70 {
+  .uuxjm {
     width: 100%;
     margin: 15px 0;
   }
 
-  .axe70body {
+  .uuxjmbody {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 15px;
   }
 
-  .axe70bodyitem {
+  .uuxjmbodyitem {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -269,7 +269,7 @@
     position: relative;
   }
 
-  .axe70bodyitemlink {
+  .uuxjmbodyitemlink {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -278,7 +278,7 @@
     gap: 10px;
   }
 
-  .axe70bodyitemimg {
+  .uuxjmbodyitemimg {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -289,18 +289,18 @@
     transition: all 0.3s ease;
   }
 
-  .axe70bodyitemimg:hover {
+  .uuxjmbodyitemimg:hover {
     box-shadow: 0 15px 35px rgba(0, 0, 0, 0.5);
     transform: translateY(-5px);
   }
 
-  .axe70bodyitemimg img {
+  .uuxjmbodyitemimg img {
     max-height: 200px;
     max-width: calc(200px * 2);
     border-radius: 10px;
   }
 
-  .axe70bodyitemtitle {
+  .uuxjmbodyitemtitle {
     padding: 5px;
     display: flex;
     height: calc(18px * 2);
@@ -311,7 +311,7 @@
     color: #fff;
   }
 
-  .axe70bodybg {
+  .uuxjmbodybg {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -322,7 +322,7 @@
     opacity: 0.5;
   }
 
-  .axe70bodyitems {
+  .uuxjmbodyitems {
     padding: 5px;
     display: flex;
     flex-direction: column;
@@ -333,25 +333,25 @@
     position: relative;
   }
 
-  .axe70bodyitems.left {
+  .uuxjmbodyitems.left {
     align-self: flex-start;
     border-radius: 0px 10px 10px 0px;
     transform: translateY(60px);
     animation: slideInLeft 1s forwards;
   }
 
-  .axe70bodyitems.right {
+  .uuxjmbodyitems.right {
     align-self: flex-end;
     border-radius: 10px 0px 0px 10px;
     transform: translateY(60px);
     animation: slideInRight 1s forwards;
   }
 
-  .axe70bodyitem.lefts {
+  .uuxjmbodyitem.lefts {
     align-self: flex-end;
   }
 
-  .axe70bodyitem.rights {
+  .uuxjmbodyitem.rights {
     align-self: flex-start;
   }
 
@@ -379,18 +379,18 @@
     }
   }
 
-  .axe70bodyitems {
+  .uuxjmbodyitems {
     animation-delay: 0.3s;
   }
 
  
 
   @media screen and (max-width: 1024px) {
-    .axe70bodyitem {
+    .uuxjmbodyitem {
       width: 100%;
     }
 
-    .axe70body {
+    .uuxjmbody {
       display: flex;
       flex-direction: column;
       gap: 15px;
