--- a/tr/hakkimizda/style.css
+++ b/tr/hakkimizda/style.css
@@ -1,17 +1,17 @@
 
-  .aygzzmenumobil {
+  .estt8menumobil {
     display: none;
     cursor: pointer;
   }
 
-  .aygzzChildren {
+  .estt8Children {
     display: flex;
     width: var(--max);
     gap: 15px;
     align-items: end;
   }
 
-  .aygzz {
+  .estt8 {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -20,7 +20,7 @@
     background-color: #e9e9e9;
   }
 
-  .aygzztitle {
+  .estt8title {
     width: 100%;
     background-color: #333;
     display: flex;
@@ -28,7 +28,7 @@
     justify-content: center;
   }
 
-  .aygzztitlebody {
+  .estt8titlebody {
     color: #fff;
     width: var(--max);
     display: flex;
@@ -36,31 +36,31 @@
     padding: 10px 0px 10px 0px;
   }
 
-  .aygzztitlebodytitle {
+  .estt8titlebodytitle {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: left;
   }
 
-  .aygzztitlebodylang {
+  .estt8titlebodylang {
     width: auto;
     margin: -5px 0px -5px 0px;
   }
 
-  .aygzztitlebodylang ul {
+  .estt8titlebodylang ul {
     display: flex;
     gap: 5px;
   }
 
-  .aygzzbody {
+  .estt8body {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 5px 0px 5px 0px;
   }
 
-  .aygzzmenulist {
+  .estt8menulist {
     display: block;
     background-color: #279c90;
     padding: 10px;
@@ -69,7 +69,7 @@
     width: 100%;
   }
 
-  .aygzzmenubody {
+  .estt8menubody {
     width: 100%;
     background-color: #279c90;
     display: flex;
@@ -77,7 +77,7 @@
     justify-content: center;
   }
 
-  .aygzzmenulist ul {
+  .estt8menulist ul {
     width: 100%;
     list-style-type: none;
     display: flex;
@@ -87,7 +87,7 @@
     overflow-x: auto;
   }
 
-  .aygzzmenulist ul a {
+  .estt8menulist ul a {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -99,14 +99,14 @@
     white-space: nowrap;
   }
 
-  .aygzzmenulist ul a:hover {
+  .estt8menulist ul a:hover {
     background-color: #e0e0e0;
     border-radius: 5px;
     color: #000;
     cursor: pointer;
   }
 
-  .aygzzmenuitem {
+  .estt8menuitem {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -118,30 +118,30 @@
     white-space: nowrap;
   }
 
-  .aygzzmenuactive {
+  .estt8menuactive {
     background-color: #e0e0e0 !important;
     border-radius: 5px;
     color: #000 !important;
     font-weight: bold;
   }
 
-  .aygzzbodylogo {
+  .estt8bodylogo {
     height: 100px;
     max-width: 90vw;
   }
 
   @media screen and (min-width: 1024px) {
-    .aygzzmenumobil {
+    .estt8menumobil {
       display: none !important;
     }
 
-    .aygzzmenulist {
+    .estt8menulist {
       display: flex !important;
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .aygzzmenumobil {
+    .estt8menumobil {
       display: flex;
       align-items: center;
       justify-content: end;
@@ -149,22 +149,22 @@
       width: 100%;
     }
 
-    .aygzzmenumobil div {
+    .estt8menumobil div {
       font-size: 32px;
       color: #fff;
       padding: 5px;
     }
 
-    .aygzzmenulist {
+    .estt8menulist {
       display: none;
     }
 
-    .aygzzbody {
+    .estt8body {
       flex-direction: column;
       gap: 20px;
     }
 
-    .aygzzChildren {
+    .estt8Children {
       width: 100%;
       gap: 0px;
       flex-direction: column;
@@ -172,19 +172,19 @@
       justify-content: center;
     }
 
-    .aygzzmenulist ul a {
+    .estt8menulist ul a {
       padding: 10px 0px 10px 0px;
     }
 
-    .aygzzmenu {
+    .estt8menu {
       overflow-x: auto;
     }
 
-    .aygzzmenulist ul {
+    .estt8menulist ul {
       flex-direction: column;
     }
 
-    .aygzzbodylogo {
+    .estt8bodylogo {
       max-height: 50vw;
       max-width: 50vw;
       max-height: 100px;
@@ -192,7 +192,7 @@
   }
 
   @media screen and (max-width: 768px) {
-    .aygzzmenulist ul a {
+    .estt8menulist ul a {
       font-size: 14px;
     }
   }
@@ -202,7 +202,7 @@
     justify-content: start;
   }
 
-  .u8ktr {
+  .kyk2j {
     width: var(--max);
     margin-top: 20px;
     gap: 10px;
@@ -210,7 +210,7 @@
     position: relative;
   }
 
-  .u8ktr-menu-btn {
+  .kyk2j-menu-btn {
     display: none;
     background-color: #000;
     padding: 10px 20px;
@@ -222,11 +222,11 @@
     align-items: center;
   }
 
-  .u8ktr-menu-btn i {
+  .kyk2j-menu-btn i {
     font-size: 20px;
   }
 
-  .u8ktr-menu {
+  .kyk2j-menu {
     width: 200px;
     background-color: #f9f9f9;
     border-radius: 5px;
@@ -237,28 +237,28 @@
     float: left;
   }
 
-  .u8ktr-desc {
+  .kyk2j-desc {
     display: flex;
     flex-direction: column;
     gap: 10px;
     float: right;
   }
 
-  .u8ktr-menu > a {
+  .kyk2j-menu > a {
     background-color: #fff;
     padding: 10px;
     float: left;
     border-radius: 5px;
   }
 
-  .u8ktr-menu > .active,
-  .u8ktr-menu > a:hover {
+  .kyk2j-menu > .active,
+  .kyk2j-menu > a:hover {
     background-color: #000;
     color: #fff;
     display: flex;
   }
 
-  .u8ktr-desc-menu {
+  .kyk2j-desc-menu {
     width: 200px;
     background-color: #000;
     display: flex;
@@ -266,19 +266,19 @@
     border-radius: 5px;
   }
 
-  .u8ktr-desc-menu > div {
+  .kyk2j-desc-menu > div {
     padding: 5px;
     border-radius: 5px;
     background-color: #fff;
     margin: 5px;
   }
 
-  .u8ktr-desc-body {
+  .kyk2j-desc-body {
     display: flex;
     justify-content: space-between;
   }
 
-  .u8ktr-title {
+  .kyk2j-title {
     width: 100%;
     height: 150px;
     background-color: #000;
@@ -291,7 +291,7 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
 
-  .u8ktr-title::before {
+  .kyk2j-title::before {
     content: "";
     position: absolute;
     top: 0;
@@ -306,44 +306,44 @@
     z-index: 1;
   }
 
-  .u8ktr-title span {
+  .kyk2j-title span {
     position: relative;
     z-index: 2;
     font-size: 30px;
   }
 
-  .u8ktr-body {
+  .kyk2j-body {
     display: flex;
     flex-direction: column;
     gap: 10px;
     text-align: left;
   }
 
-  .u8ktr-img {
+  .kyk2j-img {
     display: flex;
     align-items: center;
     justify-content: center;
     width: calc(var(--max) - 460px);
   }
 
-  .u8ktr-img img {
+  .kyk2j-img img {
     width: 100%;
   }
 
   @media screen and (min-width: 1024px) {
-    .u8ktr-desc {
+    .kyk2j-desc {
       width: calc(var(--max) - 240px);
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .u8ktr-menu-btn {
+    .kyk2j-menu-btn {
       display: flex;
       width: calc(100% - 55px);
       margin-left: 5px;
     }
 
-    .u8ktr {
+    .kyk2j {
       display: flex;
       flex-direction: column;
       width: 100%;
@@ -352,17 +352,17 @@
       margin-top: 0px;
     }
 
-    .u8ktr-img {
+    .kyk2j-img {
       width: 100%;
     }
 
-    .u8ktr-body {
+    .kyk2j-body {
       width: 100%;
       order: 3;
       padding: 10px;
     }
 
-    .u8ktr-menu {
+    .kyk2j-menu {
       width: 100%;
       float: none;
       flex-direction: column;
@@ -370,11 +370,11 @@
       display: none;
     }
 
-    .u8ktr-menu.active {
+    .kyk2j-menu.active {
       display: flex;
     }
 
-    .u8ktr-desc {
+    .kyk2j-desc {
       width: 100% !important;
       order: 2;
     }
