--- a/tr/hastanelerde-pacs-ve-arsivleme-hizmeti/style.css
+++ b/tr/hastanelerde-pacs-ve-arsivleme-hizmeti/style.css
@@ -1,17 +1,17 @@
 
-  .osk31menumobil {
+  .fix2imenumobil {
     display: none;
     cursor: pointer;
   }
 
-  .osk31Children {
+  .fix2iChildren {
     display: flex;
     width: var(--max);
     gap: 15px;
     align-items: end;
   }
 
-  .osk31 {
+  .fix2i {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -20,7 +20,7 @@
     background-color: #e9e9e9;
   }
 
-  .osk31title {
+  .fix2ititle {
     width: 100%;
     background-color: #333;
     display: flex;
@@ -28,7 +28,7 @@
     justify-content: center;
   }
 
-  .osk31titlebody {
+  .fix2ititlebody {
     color: #fff;
     width: var(--max);
     display: flex;
@@ -36,31 +36,31 @@
     padding: 10px 0px 10px 0px;
   }
 
-  .osk31titlebodytitle {
+  .fix2ititlebodytitle {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: left;
   }
 
-  .osk31titlebodylang {
+  .fix2ititlebodylang {
     width: auto;
     margin: -5px 0px -5px 0px;
   }
 
-  .osk31titlebodylang ul {
+  .fix2ititlebodylang ul {
     display: flex;
     gap: 5px;
   }
 
-  .osk31body {
+  .fix2ibody {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 5px 0px 5px 0px;
   }
 
-  .osk31menulist {
+  .fix2imenulist {
     display: block;
     background-color: #279c90;
     padding: 10px;
@@ -69,7 +69,7 @@
     width: 100%;
   }
 
-  .osk31menubody {
+  .fix2imenubody {
     width: 100%;
     background-color: #279c90;
     display: flex;
@@ -77,7 +77,7 @@
     justify-content: center;
   }
 
-  .osk31menulist ul {
+  .fix2imenulist ul {
     width: 100%;
     list-style-type: none;
     display: flex;
@@ -87,7 +87,7 @@
     overflow-x: auto;
   }
 
-  .osk31menulist ul a {
+  .fix2imenulist ul a {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -99,14 +99,14 @@
     white-space: nowrap;
   }
 
-  .osk31menulist ul a:hover {
+  .fix2imenulist ul a:hover {
     background-color: #e0e0e0;
     border-radius: 5px;
     color: #000;
     cursor: pointer;
   }
 
-  .osk31menuitem {
+  .fix2imenuitem {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -118,30 +118,30 @@
     white-space: nowrap;
   }
 
-  .osk31menuactive {
+  .fix2imenuactive {
     background-color: #e0e0e0 !important;
     border-radius: 5px;
     color: #000 !important;
     font-weight: bold;
   }
 
-  .osk31bodylogo {
+  .fix2ibodylogo {
     height: 100px;
     max-width: 90vw;
   }
 
   @media screen and (min-width: 1024px) {
-    .osk31menumobil {
+    .fix2imenumobil {
       display: none !important;
     }
 
-    .osk31menulist {
+    .fix2imenulist {
       display: flex !important;
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .osk31menumobil {
+    .fix2imenumobil {
       display: flex;
       align-items: center;
       justify-content: end;
@@ -149,22 +149,22 @@
       width: 100%;
     }
 
-    .osk31menumobil div {
+    .fix2imenumobil div {
       font-size: 32px;
       color: #fff;
       padding: 5px;
     }
 
-    .osk31menulist {
+    .fix2imenulist {
       display: none;
     }
 
-    .osk31body {
+    .fix2ibody {
       flex-direction: column;
       gap: 20px;
     }
 
-    .osk31Children {
+    .fix2iChildren {
       width: 100%;
       gap: 0px;
       flex-direction: column;
@@ -172,19 +172,19 @@
       justify-content: center;
     }
 
-    .osk31menulist ul a {
+    .fix2imenulist ul a {
       padding: 10px 0px 10px 0px;
     }
 
-    .osk31menu {
+    .fix2imenu {
       overflow-x: auto;
     }
 
-    .osk31menulist ul {
+    .fix2imenulist ul {
       flex-direction: column;
     }
 
-    .osk31bodylogo {
+    .fix2ibodylogo {
       max-height: 50vw;
       max-width: 50vw;
       max-height: 100px;
@@ -192,7 +192,7 @@
   }
 
   @media screen and (max-width: 768px) {
-    .osk31menulist ul a {
+    .fix2imenulist ul a {
       font-size: 14px;
     }
   }
@@ -202,7 +202,7 @@
     justify-content: start;
   }
 
-  .stxe7 {
+  .ka97f {
     width: var(--max);
     margin-top: 20px;
     gap: 10px;
@@ -210,7 +210,7 @@
     position: relative;
   }
 
-  .stxe7-menu-btn {
+  .ka97f-menu-btn {
     display: none;
     background-color: #000;
     padding: 10px 20px;
@@ -222,11 +222,11 @@
     align-items: center;
   }
 
-  .stxe7-menu-btn i {
+  .ka97f-menu-btn i {
     font-size: 20px;
   }
 
-  .stxe7-menu {
+  .ka97f-menu {
     width: 200px;
     background-color: #f9f9f9;
     border-radius: 5px;
@@ -237,28 +237,28 @@
     float: left;
   }
 
-  .stxe7-desc {
+  .ka97f-desc {
     display: flex;
     flex-direction: column;
     gap: 10px;
     float: right;
   }
 
-  .stxe7-menu > a {
+  .ka97f-menu > a {
     background-color: #fff;
     padding: 10px;
     float: left;
     border-radius: 5px;
   }
 
-  .stxe7-menu > .active,
-  .stxe7-menu > a:hover {
+  .ka97f-menu > .active,
+  .ka97f-menu > a:hover {
     background-color: #000;
     color: #fff;
     display: flex;
   }
 
-  .stxe7-desc-menu {
+  .ka97f-desc-menu {
     width: 200px;
     background-color: #000;
     display: flex;
@@ -266,19 +266,19 @@
     border-radius: 5px;
   }
 
-  .stxe7-desc-menu > div {
+  .ka97f-desc-menu > div {
     padding: 5px;
     border-radius: 5px;
     background-color: #fff;
     margin: 5px;
   }
 
-  .stxe7-desc-body {
+  .ka97f-desc-body {
     display: flex;
     justify-content: space-between;
   }
 
-  .stxe7-title {
+  .ka97f-title {
     width: 100%;
     height: 150px;
     background-color: #000;
@@ -291,7 +291,7 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
 
-  .stxe7-title::before {
+  .ka97f-title::before {
     content: "";
     position: absolute;
     top: 0;
@@ -306,44 +306,44 @@
     z-index: 1;
   }
 
-  .stxe7-title span {
+  .ka97f-title span {
     position: relative;
     z-index: 2;
     font-size: 30px;
   }
 
-  .stxe7-body {
+  .ka97f-body {
     display: flex;
     flex-direction: column;
     gap: 10px;
     text-align: left;
   }
 
-  .stxe7-img {
+  .ka97f-img {
     display: flex;
     align-items: center;
     justify-content: center;
     width: calc(var(--max) - 460px);
   }
 
-  .stxe7-img img {
+  .ka97f-img img {
     width: 100%;
   }
 
   @media screen and (min-width: 1024px) {
-    .stxe7-desc {
+    .ka97f-desc {
       width: calc(var(--max) - 240px);
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .stxe7-menu-btn {
+    .ka97f-menu-btn {
       display: flex;
       width: calc(100% - 55px);
       margin-left: 5px;
     }
 
-    .stxe7 {
+    .ka97f {
       display: flex;
       flex-direction: column;
       width: 100%;
@@ -352,17 +352,17 @@
       margin-top: 0px;
     }
 
-    .stxe7-img {
+    .ka97f-img {
       width: 100%;
     }
 
-    .stxe7-body {
+    .ka97f-body {
       width: 100%;
       order: 3;
       padding: 10px;
     }
 
-    .stxe7-menu {
+    .ka97f-menu {
       width: 100%;
       float: none;
       flex-direction: column;
@@ -370,11 +370,11 @@
       display: none;
     }
 
-    .stxe7-menu.active {
+    .ka97f-menu.active {
       display: flex;
     }
 
-    .stxe7-desc {
+    .ka97f-desc {
       width: 100% !important;
       order: 2;
     }
