--- a/tr/kurumsal/style.css
+++ b/tr/kurumsal/style.css
@@ -1,17 +1,17 @@
 
-  .a1itfmenumobil {
+  .gm9tqmenumobil {
     display: none;
     cursor: pointer;
   }
 
-  .a1itfChildren {
+  .gm9tqChildren {
     display: flex;
     width: var(--max);
     gap: 15px;
     align-items: end;
   }
 
-  .a1itf {
+  .gm9tq {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -20,7 +20,7 @@
     background-color: #e9e9e9;
   }
 
-  .a1itftitle {
+  .gm9tqtitle {
     width: 100%;
     background-color: #333;
     display: flex;
@@ -28,7 +28,7 @@
     justify-content: center;
   }
 
-  .a1itftitlebody {
+  .gm9tqtitlebody {
     color: #fff;
     width: var(--max);
     display: flex;
@@ -36,31 +36,31 @@
     padding: 10px 0px 10px 0px;
   }
 
-  .a1itftitlebodytitle {
+  .gm9tqtitlebodytitle {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: left;
   }
 
-  .a1itftitlebodylang {
+  .gm9tqtitlebodylang {
     width: auto;
     margin: -5px 0px -5px 0px;
   }
 
-  .a1itftitlebodylang ul {
+  .gm9tqtitlebodylang ul {
     display: flex;
     gap: 5px;
   }
 
-  .a1itfbody {
+  .gm9tqbody {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 5px 0px 5px 0px;
   }
 
-  .a1itfmenulist {
+  .gm9tqmenulist {
     display: block;
     background-color: #279c90;
     padding: 10px;
@@ -69,7 +69,7 @@
     width: 100%;
   }
 
-  .a1itfmenubody {
+  .gm9tqmenubody {
     width: 100%;
     background-color: #279c90;
     display: flex;
@@ -77,7 +77,7 @@
     justify-content: center;
   }
 
-  .a1itfmenulist ul {
+  .gm9tqmenulist ul {
     width: 100%;
     list-style-type: none;
     display: flex;
@@ -87,7 +87,7 @@
     overflow-x: auto;
   }
 
-  .a1itfmenulist ul a {
+  .gm9tqmenulist ul a {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -99,14 +99,14 @@
     white-space: nowrap;
   }
 
-  .a1itfmenulist ul a:hover {
+  .gm9tqmenulist ul a:hover {
     background-color: #e0e0e0;
     border-radius: 5px;
     color: #000;
     cursor: pointer;
   }
 
-  .a1itfmenuitem {
+  .gm9tqmenuitem {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -118,30 +118,30 @@
     white-space: nowrap;
   }
 
-  .a1itfmenuactive {
+  .gm9tqmenuactive {
     background-color: #e0e0e0 !important;
     border-radius: 5px;
     color: #000 !important;
     font-weight: bold;
   }
 
-  .a1itfbodylogo {
+  .gm9tqbodylogo {
     height: 100px;
     max-width: 90vw;
   }
 
   @media screen and (min-width: 1024px) {
-    .a1itfmenumobil {
+    .gm9tqmenumobil {
       display: none !important;
     }
 
-    .a1itfmenulist {
+    .gm9tqmenulist {
       display: flex !important;
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .a1itfmenumobil {
+    .gm9tqmenumobil {
       display: flex;
       align-items: center;
       justify-content: end;
@@ -149,22 +149,22 @@
       width: 100%;
     }
 
-    .a1itfmenumobil div {
+    .gm9tqmenumobil div {
       font-size: 32px;
       color: #fff;
       padding: 5px;
     }
 
-    .a1itfmenulist {
+    .gm9tqmenulist {
       display: none;
     }
 
-    .a1itfbody {
+    .gm9tqbody {
       flex-direction: column;
       gap: 20px;
     }
 
-    .a1itfChildren {
+    .gm9tqChildren {
       width: 100%;
       gap: 0px;
       flex-direction: column;
@@ -172,19 +172,19 @@
       justify-content: center;
     }
 
-    .a1itfmenulist ul a {
+    .gm9tqmenulist ul a {
       padding: 10px 0px 10px 0px;
     }
 
-    .a1itfmenu {
+    .gm9tqmenu {
       overflow-x: auto;
     }
 
-    .a1itfmenulist ul {
+    .gm9tqmenulist ul {
       flex-direction: column;
     }
 
-    .a1itfbodylogo {
+    .gm9tqbodylogo {
       max-height: 50vw;
       max-width: 50vw;
       max-height: 100px;
@@ -192,7 +192,7 @@
   }
 
   @media screen and (max-width: 768px) {
-    .a1itfmenulist ul a {
+    .gm9tqmenulist ul a {
       font-size: 14px;
     }
   }
