--- a/tr/rontgen-ve-mamografi-odalarinin-projelendirilmesi-ve-yapimi/style.css
+++ b/tr/rontgen-ve-mamografi-odalarinin-projelendirilmesi-ve-yapimi/style.css
@@ -1,17 +1,17 @@
 
-  .rojzfmenumobil {
+  .sfr3imenumobil {
     display: none;
     cursor: pointer;
   }
 
-  .rojzfChildren {
+  .sfr3iChildren {
     display: flex;
     width: var(--max);
     gap: 15px;
     align-items: end;
   }
 
-  .rojzf {
+  .sfr3i {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -20,7 +20,7 @@
     background-color: #e9e9e9;
   }
 
-  .rojzftitle {
+  .sfr3ititle {
     width: 100%;
     background-color: #333;
     display: flex;
@@ -28,7 +28,7 @@
     justify-content: center;
   }
 
-  .rojzftitlebody {
+  .sfr3ititlebody {
     color: #fff;
     width: var(--max);
     display: flex;
@@ -36,31 +36,31 @@
     padding: 10px 0px 10px 0px;
   }
 
-  .rojzftitlebodytitle {
+  .sfr3ititlebodytitle {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: left;
   }
 
-  .rojzftitlebodylang {
+  .sfr3ititlebodylang {
     width: auto;
     margin: -5px 0px -5px 0px;
   }
 
-  .rojzftitlebodylang ul {
+  .sfr3ititlebodylang ul {
     display: flex;
     gap: 5px;
   }
 
-  .rojzfbody {
+  .sfr3ibody {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 5px 0px 5px 0px;
   }
 
-  .rojzfmenulist {
+  .sfr3imenulist {
     display: block;
     background-color: #279c90;
     padding: 10px;
@@ -69,7 +69,7 @@
     width: 100%;
   }
 
-  .rojzfmenubody {
+  .sfr3imenubody {
     width: 100%;
     background-color: #279c90;
     display: flex;
@@ -77,7 +77,7 @@
     justify-content: center;
   }
 
-  .rojzfmenulist ul {
+  .sfr3imenulist ul {
     width: 100%;
     list-style-type: none;
     display: flex;
@@ -87,7 +87,7 @@
     overflow-x: auto;
   }
 
-  .rojzfmenulist ul a {
+  .sfr3imenulist ul a {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -99,14 +99,14 @@
     white-space: nowrap;
   }
 
-  .rojzfmenulist ul a:hover {
+  .sfr3imenulist ul a:hover {
     background-color: #e0e0e0;
     border-radius: 5px;
     color: #000;
     cursor: pointer;
   }
 
-  .rojzfmenuitem {
+  .sfr3imenuitem {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -118,30 +118,30 @@
     white-space: nowrap;
   }
 
-  .rojzfmenuactive {
+  .sfr3imenuactive {
     background-color: #e0e0e0 !important;
     border-radius: 5px;
     color: #000 !important;
     font-weight: bold;
   }
 
-  .rojzfbodylogo {
+  .sfr3ibodylogo {
     height: 100px;
     max-width: 90vw;
   }
 
   @media screen and (min-width: 1024px) {
-    .rojzfmenumobil {
+    .sfr3imenumobil {
       display: none !important;
     }
 
-    .rojzfmenulist {
+    .sfr3imenulist {
       display: flex !important;
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .rojzfmenumobil {
+    .sfr3imenumobil {
       display: flex;
       align-items: center;
       justify-content: end;
@@ -149,22 +149,22 @@
       width: 100%;
     }
 
-    .rojzfmenumobil div {
+    .sfr3imenumobil div {
       font-size: 32px;
       color: #fff;
       padding: 5px;
     }
 
-    .rojzfmenulist {
+    .sfr3imenulist {
       display: none;
     }
 
-    .rojzfbody {
+    .sfr3ibody {
       flex-direction: column;
       gap: 20px;
     }
 
-    .rojzfChildren {
+    .sfr3iChildren {
       width: 100%;
       gap: 0px;
       flex-direction: column;
@@ -172,19 +172,19 @@
       justify-content: center;
     }
 
-    .rojzfmenulist ul a {
+    .sfr3imenulist ul a {
       padding: 10px 0px 10px 0px;
     }
 
-    .rojzfmenu {
+    .sfr3imenu {
       overflow-x: auto;
     }
 
-    .rojzfmenulist ul {
+    .sfr3imenulist ul {
       flex-direction: column;
     }
 
-    .rojzfbodylogo {
+    .sfr3ibodylogo {
       max-height: 50vw;
       max-width: 50vw;
       max-height: 100px;
@@ -192,7 +192,7 @@
   }
 
   @media screen and (max-width: 768px) {
-    .rojzfmenulist ul a {
+    .sfr3imenulist ul a {
       font-size: 14px;
     }
   }
@@ -202,7 +202,7 @@
     justify-content: start;
   }
 
-  .g8vyq {
+  .lavd8 {
     width: var(--max);
     margin-top: 20px;
     gap: 10px;
@@ -210,7 +210,7 @@
     position: relative;
   }
 
-  .g8vyq-menu-btn {
+  .lavd8-menu-btn {
     display: none;
     background-color: #000;
     padding: 10px 20px;
@@ -222,11 +222,11 @@
     align-items: center;
   }
 
-  .g8vyq-menu-btn i {
+  .lavd8-menu-btn i {
     font-size: 20px;
   }
 
-  .g8vyq-menu {
+  .lavd8-menu {
     width: 200px;
     background-color: #f9f9f9;
     border-radius: 5px;
@@ -237,28 +237,28 @@
     float: left;
   }
 
-  .g8vyq-desc {
+  .lavd8-desc {
     display: flex;
     flex-direction: column;
     gap: 10px;
     float: right;
   }
 
-  .g8vyq-menu > a {
+  .lavd8-menu > a {
     background-color: #fff;
     padding: 10px;
     float: left;
     border-radius: 5px;
   }
 
-  .g8vyq-menu > .active,
-  .g8vyq-menu > a:hover {
+  .lavd8-menu > .active,
+  .lavd8-menu > a:hover {
     background-color: #000;
     color: #fff;
     display: flex;
   }
 
-  .g8vyq-desc-menu {
+  .lavd8-desc-menu {
     width: 200px;
     background-color: #000;
     display: flex;
@@ -266,19 +266,19 @@
     border-radius: 5px;
   }
 
-  .g8vyq-desc-menu > div {
+  .lavd8-desc-menu > div {
     padding: 5px;
     border-radius: 5px;
     background-color: #fff;
     margin: 5px;
   }
 
-  .g8vyq-desc-body {
+  .lavd8-desc-body {
     display: flex;
     justify-content: space-between;
   }
 
-  .g8vyq-title {
+  .lavd8-title {
     width: 100%;
     height: 150px;
     background-color: #000;
@@ -291,7 +291,7 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
 
-  .g8vyq-title::before {
+  .lavd8-title::before {
     content: "";
     position: absolute;
     top: 0;
@@ -306,44 +306,44 @@
     z-index: 1;
   }
 
-  .g8vyq-title span {
+  .lavd8-title span {
     position: relative;
     z-index: 2;
     font-size: 30px;
   }
 
-  .g8vyq-body {
+  .lavd8-body {
     display: flex;
     flex-direction: column;
     gap: 10px;
     text-align: left;
   }
 
-  .g8vyq-img {
+  .lavd8-img {
     display: flex;
     align-items: center;
     justify-content: center;
     width: calc(var(--max) - 460px);
   }
 
-  .g8vyq-img img {
+  .lavd8-img img {
     width: 100%;
   }
 
   @media screen and (min-width: 1024px) {
-    .g8vyq-desc {
+    .lavd8-desc {
       width: calc(var(--max) - 240px);
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .g8vyq-menu-btn {
+    .lavd8-menu-btn {
       display: flex;
       width: calc(100% - 55px);
       margin-left: 5px;
     }
 
-    .g8vyq {
+    .lavd8 {
       display: flex;
       flex-direction: column;
       width: 100%;
@@ -352,17 +352,17 @@
       margin-top: 0px;
     }
 
-    .g8vyq-img {
+    .lavd8-img {
       width: 100%;
     }
 
-    .g8vyq-body {
+    .lavd8-body {
       width: 100%;
       order: 3;
       padding: 10px;
     }
 
-    .g8vyq-menu {
+    .lavd8-menu {
       width: 100%;
       float: none;
       flex-direction: column;
@@ -370,11 +370,11 @@
       display: none;
     }
 
-    .g8vyq-menu.active {
+    .lavd8-menu.active {
       display: flex;
     }
 
-    .g8vyq-desc {
+    .lavd8-desc {
       width: 100% !important;
       order: 2;
     }
