--- a/tr/vizyon/style.css
+++ b/tr/vizyon/style.css
@@ -1,17 +1,17 @@
 
-  .qjq8jmenumobil {
+  .gafgzmenumobil {
     display: none;
     cursor: pointer;
   }
 
-  .qjq8jChildren {
+  .gafgzChildren {
     display: flex;
     width: var(--max);
     gap: 15px;
     align-items: end;
   }
 
-  .qjq8j {
+  .gafgz {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -20,7 +20,7 @@
     background-color: #e9e9e9;
   }
 
-  .qjq8jtitle {
+  .gafgztitle {
     width: 100%;
     background-color: #333;
     display: flex;
@@ -28,7 +28,7 @@
     justify-content: center;
   }
 
-  .qjq8jtitlebody {
+  .gafgztitlebody {
     color: #fff;
     width: var(--max);
     display: flex;
@@ -36,31 +36,31 @@
     padding: 10px 0px 10px 0px;
   }
 
-  .qjq8jtitlebodytitle {
+  .gafgztitlebodytitle {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: left;
   }
 
-  .qjq8jtitlebodylang {
+  .gafgztitlebodylang {
     width: auto;
     margin: -5px 0px -5px 0px;
   }
 
-  .qjq8jtitlebodylang ul {
+  .gafgztitlebodylang ul {
     display: flex;
     gap: 5px;
   }
 
-  .qjq8jbody {
+  .gafgzbody {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 5px 0px 5px 0px;
   }
 
-  .qjq8jmenulist {
+  .gafgzmenulist {
     display: block;
     background-color: #279c90;
     padding: 10px;
@@ -69,7 +69,7 @@
     width: 100%;
   }
 
-  .qjq8jmenubody {
+  .gafgzmenubody {
     width: 100%;
     background-color: #279c90;
     display: flex;
@@ -77,7 +77,7 @@
     justify-content: center;
   }
 
-  .qjq8jmenulist ul {
+  .gafgzmenulist ul {
     width: 100%;
     list-style-type: none;
     display: flex;
@@ -87,7 +87,7 @@
     overflow-x: auto;
   }
 
-  .qjq8jmenulist ul a {
+  .gafgzmenulist ul a {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -99,14 +99,14 @@
     white-space: nowrap;
   }
 
-  .qjq8jmenulist ul a:hover {
+  .gafgzmenulist ul a:hover {
     background-color: #e0e0e0;
     border-radius: 5px;
     color: #000;
     cursor: pointer;
   }
 
-  .qjq8jmenuitem {
+  .gafgzmenuitem {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -118,30 +118,30 @@
     white-space: nowrap;
   }
 
-  .qjq8jmenuactive {
+  .gafgzmenuactive {
     background-color: #e0e0e0 !important;
     border-radius: 5px;
     color: #000 !important;
     font-weight: bold;
   }
 
-  .qjq8jbodylogo {
+  .gafgzbodylogo {
     height: 100px;
     max-width: 90vw;
   }
 
   @media screen and (min-width: 1024px) {
-    .qjq8jmenumobil {
+    .gafgzmenumobil {
       display: none !important;
     }
 
-    .qjq8jmenulist {
+    .gafgzmenulist {
       display: flex !important;
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .qjq8jmenumobil {
+    .gafgzmenumobil {
       display: flex;
       align-items: center;
       justify-content: end;
@@ -149,22 +149,22 @@
       width: 100%;
     }
 
-    .qjq8jmenumobil div {
+    .gafgzmenumobil div {
       font-size: 32px;
       color: #fff;
       padding: 5px;
     }
 
-    .qjq8jmenulist {
+    .gafgzmenulist {
       display: none;
     }
 
-    .qjq8jbody {
+    .gafgzbody {
       flex-direction: column;
       gap: 20px;
     }
 
-    .qjq8jChildren {
+    .gafgzChildren {
       width: 100%;
       gap: 0px;
       flex-direction: column;
@@ -172,19 +172,19 @@
       justify-content: center;
     }
 
-    .qjq8jmenulist ul a {
+    .gafgzmenulist ul a {
       padding: 10px 0px 10px 0px;
     }
 
-    .qjq8jmenu {
+    .gafgzmenu {
       overflow-x: auto;
     }
 
-    .qjq8jmenulist ul {
+    .gafgzmenulist ul {
       flex-direction: column;
     }
 
-    .qjq8jbodylogo {
+    .gafgzbodylogo {
       max-height: 50vw;
       max-width: 50vw;
       max-height: 100px;
@@ -192,7 +192,7 @@
   }
 
   @media screen and (max-width: 768px) {
-    .qjq8jmenulist ul a {
+    .gafgzmenulist ul a {
       font-size: 14px;
     }
   }
@@ -202,7 +202,7 @@
     justify-content: start;
   }
 
-  .b3wsr {
+  .a631d {
     width: var(--max);
     margin-top: 20px;
     gap: 10px;
@@ -210,7 +210,7 @@
     position: relative;
   }
 
-  .b3wsr-menu-btn {
+  .a631d-menu-btn {
     display: none;
     background-color: #000;
     padding: 10px 20px;
@@ -222,11 +222,11 @@
     align-items: center;
   }
 
-  .b3wsr-menu-btn i {
+  .a631d-menu-btn i {
     font-size: 20px;
   }
 
-  .b3wsr-menu {
+  .a631d-menu {
     width: 200px;
     background-color: #f9f9f9;
     border-radius: 5px;
@@ -237,28 +237,28 @@
     float: left;
   }
 
-  .b3wsr-desc {
+  .a631d-desc {
     display: flex;
     flex-direction: column;
     gap: 10px;
     float: right;
   }
 
-  .b3wsr-menu > a {
+  .a631d-menu > a {
     background-color: #fff;
     padding: 10px;
     float: left;
     border-radius: 5px;
   }
 
-  .b3wsr-menu > .active,
-  .b3wsr-menu > a:hover {
+  .a631d-menu > .active,
+  .a631d-menu > a:hover {
     background-color: #000;
     color: #fff;
     display: flex;
   }
 
-  .b3wsr-desc-menu {
+  .a631d-desc-menu {
     width: 200px;
     background-color: #000;
     display: flex;
@@ -266,19 +266,19 @@
     border-radius: 5px;
   }
 
-  .b3wsr-desc-menu > div {
+  .a631d-desc-menu > div {
     padding: 5px;
     border-radius: 5px;
     background-color: #fff;
     margin: 5px;
   }
 
-  .b3wsr-desc-body {
+  .a631d-desc-body {
     display: flex;
     justify-content: space-between;
   }
 
-  .b3wsr-title {
+  .a631d-title {
     width: 100%;
     height: 150px;
     background-color: #000;
@@ -291,7 +291,7 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
 
-  .b3wsr-title::before {
+  .a631d-title::before {
     content: "";
     position: absolute;
     top: 0;
@@ -306,44 +306,44 @@
     z-index: 1;
   }
 
-  .b3wsr-title span {
+  .a631d-title span {
     position: relative;
     z-index: 2;
     font-size: 30px;
   }
 
-  .b3wsr-body {
+  .a631d-body {
     display: flex;
     flex-direction: column;
     gap: 10px;
     text-align: left;
   }
 
-  .b3wsr-img {
+  .a631d-img {
     display: flex;
     align-items: center;
     justify-content: center;
     width: calc(var(--max) - 460px);
   }
 
-  .b3wsr-img img {
+  .a631d-img img {
     width: 100%;
   }
 
   @media screen and (min-width: 1024px) {
-    .b3wsr-desc {
+    .a631d-desc {
       width: calc(var(--max) - 240px);
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .b3wsr-menu-btn {
+    .a631d-menu-btn {
       display: flex;
       width: calc(100% - 55px);
       margin-left: 5px;
     }
 
-    .b3wsr {
+    .a631d {
       display: flex;
       flex-direction: column;
       width: 100%;
@@ -352,17 +352,17 @@
       margin-top: 0px;
     }
 
-    .b3wsr-img {
+    .a631d-img {
       width: 100%;
     }
 
-    .b3wsr-body {
+    .a631d-body {
       width: 100%;
       order: 3;
       padding: 10px;
     }
 
-    .b3wsr-menu {
+    .a631d-menu {
       width: 100%;
       float: none;
       flex-direction: column;
@@ -370,11 +370,11 @@
       display: none;
     }
 
-    .b3wsr-menu.active {
+    .a631d-menu.active {
       display: flex;
     }
 
-    .b3wsr-desc {
+    .a631d-desc {
       width: 100% !important;
       order: 2;
     }
