--- a/tr/yasal-uyari/style.css
+++ b/tr/yasal-uyari/style.css
@@ -1,17 +1,17 @@
 
-  .cn1rumenumobil {
+  .a3yq7menumobil {
     display: none;
     cursor: pointer;
   }
 
-  .cn1ruChildren {
+  .a3yq7Children {
     display: flex;
     width: var(--max);
     gap: 15px;
     align-items: end;
   }
 
-  .cn1ru {
+  .a3yq7 {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -20,7 +20,7 @@
     background-color: #e9e9e9;
   }
 
-  .cn1rutitle {
+  .a3yq7title {
     width: 100%;
     background-color: #333;
     display: flex;
@@ -28,7 +28,7 @@
     justify-content: center;
   }
 
-  .cn1rutitlebody {
+  .a3yq7titlebody {
     color: #fff;
     width: var(--max);
     display: flex;
@@ -36,31 +36,31 @@
     padding: 10px 0px 10px 0px;
   }
 
-  .cn1rutitlebodytitle {
+  .a3yq7titlebodytitle {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: left;
   }
 
-  .cn1rutitlebodylang {
+  .a3yq7titlebodylang {
     width: auto;
     margin: -5px 0px -5px 0px;
   }
 
-  .cn1rutitlebodylang ul {
+  .a3yq7titlebodylang ul {
     display: flex;
     gap: 5px;
   }
 
-  .cn1rubody {
+  .a3yq7body {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 5px 0px 5px 0px;
   }
 
-  .cn1rumenulist {
+  .a3yq7menulist {
     display: block;
     background-color: #279c90;
     padding: 10px;
@@ -69,7 +69,7 @@
     width: 100%;
   }
 
-  .cn1rumenubody {
+  .a3yq7menubody {
     width: 100%;
     background-color: #279c90;
     display: flex;
@@ -77,7 +77,7 @@
     justify-content: center;
   }
 
-  .cn1rumenulist ul {
+  .a3yq7menulist ul {
     width: 100%;
     list-style-type: none;
     display: flex;
@@ -87,7 +87,7 @@
     overflow-x: auto;
   }
 
-  .cn1rumenulist ul a {
+  .a3yq7menulist ul a {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -99,14 +99,14 @@
     white-space: nowrap;
   }
 
-  .cn1rumenulist ul a:hover {
+  .a3yq7menulist ul a:hover {
     background-color: #e0e0e0;
     border-radius: 5px;
     color: #000;
     cursor: pointer;
   }
 
-  .cn1rumenuitem {
+  .a3yq7menuitem {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -118,30 +118,30 @@
     white-space: nowrap;
   }
 
-  .cn1rumenuactive {
+  .a3yq7menuactive {
     background-color: #e0e0e0 !important;
     border-radius: 5px;
     color: #000 !important;
     font-weight: bold;
   }
 
-  .cn1rubodylogo {
+  .a3yq7bodylogo {
     height: 100px;
     max-width: 90vw;
   }
 
   @media screen and (min-width: 1024px) {
-    .cn1rumenumobil {
+    .a3yq7menumobil {
       display: none !important;
     }
 
-    .cn1rumenulist {
+    .a3yq7menulist {
       display: flex !important;
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .cn1rumenumobil {
+    .a3yq7menumobil {
       display: flex;
       align-items: center;
       justify-content: end;
@@ -149,22 +149,22 @@
       width: 100%;
     }
 
-    .cn1rumenumobil div {
+    .a3yq7menumobil div {
       font-size: 32px;
       color: #fff;
       padding: 5px;
     }
 
-    .cn1rumenulist {
+    .a3yq7menulist {
       display: none;
     }
 
-    .cn1rubody {
+    .a3yq7body {
       flex-direction: column;
       gap: 20px;
     }
 
-    .cn1ruChildren {
+    .a3yq7Children {
       width: 100%;
       gap: 0px;
       flex-direction: column;
@@ -172,19 +172,19 @@
       justify-content: center;
     }
 
-    .cn1rumenulist ul a {
+    .a3yq7menulist ul a {
       padding: 10px 0px 10px 0px;
     }
 
-    .cn1rumenu {
+    .a3yq7menu {
       overflow-x: auto;
     }
 
-    .cn1rumenulist ul {
+    .a3yq7menulist ul {
       flex-direction: column;
     }
 
-    .cn1rubodylogo {
+    .a3yq7bodylogo {
       max-height: 50vw;
       max-width: 50vw;
       max-height: 100px;
@@ -192,7 +192,7 @@
   }
 
   @media screen and (max-width: 768px) {
-    .cn1rumenulist ul a {
+    .a3yq7menulist ul a {
       font-size: 14px;
     }
   }
@@ -202,7 +202,7 @@
     justify-content: start;
   }
 
-  .mow41 {
+  .m207n {
     width: var(--max);
     margin-top: 20px;
     gap: 10px;
@@ -210,7 +210,7 @@
     position: relative;
   }
 
-  .mow41-menu-btn {
+  .m207n-menu-btn {
     display: none;
     background-color: #000;
     padding: 10px 20px;
@@ -222,11 +222,11 @@
     align-items: center;
   }
 
-  .mow41-menu-btn i {
+  .m207n-menu-btn i {
     font-size: 20px;
   }
 
-  .mow41-menu {
+  .m207n-menu {
     width: 200px;
     background-color: #f9f9f9;
     border-radius: 5px;
@@ -237,28 +237,28 @@
     float: left;
   }
 
-  .mow41-desc {
+  .m207n-desc {
     display: flex;
     flex-direction: column;
     gap: 10px;
     float: right;
   }
 
-  .mow41-menu > a {
+  .m207n-menu > a {
     background-color: #fff;
     padding: 10px;
     float: left;
     border-radius: 5px;
   }
 
-  .mow41-menu > .active,
-  .mow41-menu > a:hover {
+  .m207n-menu > .active,
+  .m207n-menu > a:hover {
     background-color: #000;
     color: #fff;
     display: flex;
   }
 
-  .mow41-desc-menu {
+  .m207n-desc-menu {
     width: 200px;
     background-color: #000;
     display: flex;
@@ -266,19 +266,19 @@
     border-radius: 5px;
   }
 
-  .mow41-desc-menu > div {
+  .m207n-desc-menu > div {
     padding: 5px;
     border-radius: 5px;
     background-color: #fff;
     margin: 5px;
   }
 
-  .mow41-desc-body {
+  .m207n-desc-body {
     display: flex;
     justify-content: space-between;
   }
 
-  .mow41-title {
+  .m207n-title {
     width: 100%;
     height: 150px;
     background-color: #000;
@@ -291,7 +291,7 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
 
-  .mow41-title::before {
+  .m207n-title::before {
     content: "";
     position: absolute;
     top: 0;
@@ -306,44 +306,44 @@
     z-index: 1;
   }
 
-  .mow41-title span {
+  .m207n-title span {
     position: relative;
     z-index: 2;
     font-size: 30px;
   }
 
-  .mow41-body {
+  .m207n-body {
     display: flex;
     flex-direction: column;
     gap: 10px;
     text-align: left;
   }
 
-  .mow41-img {
+  .m207n-img {
     display: flex;
     align-items: center;
     justify-content: center;
     width: calc(var(--max) - 460px);
   }
 
-  .mow41-img img {
+  .m207n-img img {
     width: 100%;
   }
 
   @media screen and (min-width: 1024px) {
-    .mow41-desc {
+    .m207n-desc {
       width: calc(var(--max) - 240px);
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .mow41-menu-btn {
+    .m207n-menu-btn {
       display: flex;
       width: calc(100% - 55px);
       margin-left: 5px;
     }
 
-    .mow41 {
+    .m207n {
       display: flex;
       flex-direction: column;
       width: 100%;
@@ -352,17 +352,17 @@
       margin-top: 0px;
     }
 
-    .mow41-img {
+    .m207n-img {
       width: 100%;
     }
 
-    .mow41-body {
+    .m207n-body {
       width: 100%;
       order: 3;
       padding: 10px;
     }
 
-    .mow41-menu {
+    .m207n-menu {
       width: 100%;
       float: none;
       flex-direction: column;
@@ -370,11 +370,11 @@
       display: none;
     }
 
-    .mow41-menu.active {
+    .m207n-menu.active {
       display: flex;
     }
 
-    .mow41-desc {
+    .m207n-desc {
       width: 100% !important;
       order: 2;
     }
