--- a/tr/btodasi/style.css
+++ b/tr/btodasi/style.css
@@ -1,17 +1,17 @@
 
-  .tnll5menumobil {
+  .k4h54menumobil {
     display: none;
     cursor: pointer;
   }
 
-  .tnll5Children {
+  .k4h54Children {
     display: flex;
     width: var(--max);
     gap: 15px;
     align-items: end;
   }
 
-  .tnll5 {
+  .k4h54 {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -20,7 +20,7 @@
     background-color: #e9e9e9;
   }
 
-  .tnll5title {
+  .k4h54title {
     width: 100%;
     background-color: #333;
     display: flex;
@@ -28,7 +28,7 @@
     justify-content: center;
   }
 
-  .tnll5titlebody {
+  .k4h54titlebody {
     color: #fff;
     width: var(--max);
     display: flex;
@@ -36,31 +36,31 @@
     padding: 10px 0px 10px 0px;
   }
 
-  .tnll5titlebodytitle {
+  .k4h54titlebodytitle {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: left;
   }
 
-  .tnll5titlebodylang {
+  .k4h54titlebodylang {
     width: auto;
     margin: -5px 0px -5px 0px;
   }
 
-  .tnll5titlebodylang ul {
+  .k4h54titlebodylang ul {
     display: flex;
     gap: 5px;
   }
 
-  .tnll5body {
+  .k4h54body {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 5px 0px 5px 0px;
   }
 
-  .tnll5menulist {
+  .k4h54menulist {
     display: block;
     background-color: #279c90;
     padding: 10px;
@@ -69,7 +69,7 @@
     width: 100%;
   }
 
-  .tnll5menubody {
+  .k4h54menubody {
     width: 100%;
     background-color: #279c90;
     display: flex;
@@ -77,7 +77,7 @@
     justify-content: center;
   }
 
-  .tnll5menulist ul {
+  .k4h54menulist ul {
     width: 100%;
     list-style-type: none;
     display: flex;
@@ -87,7 +87,7 @@
     overflow-x: auto;
   }
 
-  .tnll5menulist ul a {
+  .k4h54menulist ul a {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -99,14 +99,14 @@
     white-space: nowrap;
   }
 
-  .tnll5menulist ul a:hover {
+  .k4h54menulist ul a:hover {
     background-color: #e0e0e0;
     border-radius: 5px;
     color: #000;
     cursor: pointer;
   }
 
-  .tnll5menuitem {
+  .k4h54menuitem {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -118,30 +118,30 @@
     white-space: nowrap;
   }
 
-  .tnll5menuactive {
+  .k4h54menuactive {
     background-color: #e0e0e0 !important;
     border-radius: 5px;
     color: #000 !important;
     font-weight: bold;
   }
 
-  .tnll5bodylogo {
+  .k4h54bodylogo {
     height: 100px;
     max-width: 90vw;
   }
 
   @media screen and (min-width: 1024px) {
-    .tnll5menumobil {
+    .k4h54menumobil {
       display: none !important;
     }
 
-    .tnll5menulist {
+    .k4h54menulist {
       display: flex !important;
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .tnll5menumobil {
+    .k4h54menumobil {
       display: flex;
       align-items: center;
       justify-content: end;
@@ -149,22 +149,22 @@
       width: 100%;
     }
 
-    .tnll5menumobil div {
+    .k4h54menumobil div {
       font-size: 32px;
       color: #fff;
       padding: 5px;
     }
 
-    .tnll5menulist {
+    .k4h54menulist {
       display: none;
     }
 
-    .tnll5body {
+    .k4h54body {
       flex-direction: column;
       gap: 20px;
     }
 
-    .tnll5Children {
+    .k4h54Children {
       width: 100%;
       gap: 0px;
       flex-direction: column;
@@ -172,19 +172,19 @@
       justify-content: center;
     }
 
-    .tnll5menulist ul a {
+    .k4h54menulist ul a {
       padding: 10px 0px 10px 0px;
     }
 
-    .tnll5menu {
+    .k4h54menu {
       overflow-x: auto;
     }
 
-    .tnll5menulist ul {
+    .k4h54menulist ul {
       flex-direction: column;
     }
 
-    .tnll5bodylogo {
+    .k4h54bodylogo {
       max-height: 50vw;
       max-width: 50vw;
       max-height: 100px;
@@ -192,7 +192,7 @@
   }
 
   @media screen and (max-width: 768px) {
-    .tnll5menulist ul a {
+    .k4h54menulist ul a {
       font-size: 14px;
     }
   }
@@ -202,7 +202,7 @@
     justify-content: start;
   }
 
-  .iing8 {
+  .d8uju {
     width: var(--max);
     margin-top: 20px;
     gap: 10px;
@@ -210,7 +210,7 @@
     position: relative;
   }
 
-  .iing8-menu-btn {
+  .d8uju-menu-btn {
     display: none;
     background-color: #000;
     padding: 10px 20px;
@@ -222,11 +222,11 @@
     align-items: center;
   }
 
-  .iing8-menu-btn i {
+  .d8uju-menu-btn i {
     font-size: 20px;
   }
 
-  .iing8-menu {
+  .d8uju-menu {
     width: 200px;
     background-color: #f9f9f9;
     border-radius: 5px;
@@ -237,28 +237,28 @@
     float: left;
   }
 
-  .iing8-desc {
+  .d8uju-desc {
     display: flex;
     flex-direction: column;
     gap: 10px;
     float: right;
   }
 
-  .iing8-menu > a {
+  .d8uju-menu > a {
     background-color: #fff;
     padding: 10px;
     float: left;
     border-radius: 5px;
   }
 
-  .iing8-menu > .active,
-  .iing8-menu > a:hover {
+  .d8uju-menu > .active,
+  .d8uju-menu > a:hover {
     background-color: #000;
     color: #fff;
     display: flex;
   }
 
-  .iing8-desc-menu {
+  .d8uju-desc-menu {
     width: 200px;
     background-color: #000;
     display: flex;
@@ -266,19 +266,19 @@
     border-radius: 5px;
   }
 
-  .iing8-desc-menu > div {
+  .d8uju-desc-menu > div {
     padding: 5px;
     border-radius: 5px;
     background-color: #fff;
     margin: 5px;
   }
 
-  .iing8-desc-body {
+  .d8uju-desc-body {
     display: flex;
     justify-content: space-between;
   }
 
-  .iing8-title {
+  .d8uju-title {
     width: 100%;
     height: 150px;
     background-color: #000;
@@ -291,7 +291,7 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
 
-  .iing8-title::before {
+  .d8uju-title::before {
     content: "";
     position: absolute;
     top: 0;
@@ -306,44 +306,44 @@
     z-index: 1;
   }
 
-  .iing8-title span {
+  .d8uju-title span {
     position: relative;
     z-index: 2;
     font-size: 30px;
   }
 
-  .iing8-body {
+  .d8uju-body {
     display: flex;
     flex-direction: column;
     gap: 10px;
     text-align: left;
   }
 
-  .iing8-img {
+  .d8uju-img {
     display: flex;
     align-items: center;
     justify-content: center;
     width: calc(var(--max) - 460px);
   }
 
-  .iing8-img img {
+  .d8uju-img img {
     width: 100%;
   }
 
   @media screen and (min-width: 1024px) {
-    .iing8-desc {
+    .d8uju-desc {
       width: calc(var(--max) - 240px);
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .iing8-menu-btn {
+    .d8uju-menu-btn {
       display: flex;
       width: calc(100% - 55px);
       margin-left: 5px;
     }
 
-    .iing8 {
+    .d8uju {
       display: flex;
       flex-direction: column;
       width: 100%;
@@ -352,17 +352,17 @@
       margin-top: 0px;
     }
 
-    .iing8-img {
+    .d8uju-img {
       width: 100%;
     }
 
-    .iing8-body {
+    .d8uju-body {
       width: 100%;
       order: 3;
       padding: 10px;
     }
 
-    .iing8-menu {
+    .d8uju-menu {
       width: 100%;
       float: none;
       flex-direction: column;
@@ -370,11 +370,11 @@
       display: none;
     }
 
-    .iing8-menu.active {
+    .d8uju-menu.active {
       display: flex;
     }
 
-    .iing8-desc {
+    .d8uju-desc {
       width: 100% !important;
       order: 2;
     }
