--- a/tr/e-katalog/style.css
+++ b/tr/e-katalog/style.css
@@ -1,17 +1,17 @@
 
-  .vpuy9menumobil {
+  .ws4tlmenumobil {
     display: none;
     cursor: pointer;
   }
 
-  .vpuy9Children {
+  .ws4tlChildren {
     display: flex;
     width: var(--max);
     gap: 15px;
     align-items: end;
   }
 
-  .vpuy9 {
+  .ws4tl {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -20,7 +20,7 @@
     background-color: #e9e9e9;
   }
 
-  .vpuy9title {
+  .ws4tltitle {
     width: 100%;
     background-color: #333;
     display: flex;
@@ -28,7 +28,7 @@
     justify-content: center;
   }
 
-  .vpuy9titlebody {
+  .ws4tltitlebody {
     color: #fff;
     width: var(--max);
     display: flex;
@@ -36,31 +36,31 @@
     padding: 10px 0px 10px 0px;
   }
 
-  .vpuy9titlebodytitle {
+  .ws4tltitlebodytitle {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: left;
   }
 
-  .vpuy9titlebodylang {
+  .ws4tltitlebodylang {
     width: auto;
     margin: -5px 0px -5px 0px;
   }
 
-  .vpuy9titlebodylang ul {
+  .ws4tltitlebodylang ul {
     display: flex;
     gap: 5px;
   }
 
-  .vpuy9body {
+  .ws4tlbody {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 5px 0px 5px 0px;
   }
 
-  .vpuy9menulist {
+  .ws4tlmenulist {
     display: block;
     background-color: #279c90;
     padding: 10px;
@@ -69,7 +69,7 @@
     width: 100%;
   }
 
-  .vpuy9menubody {
+  .ws4tlmenubody {
     width: 100%;
     background-color: #279c90;
     display: flex;
@@ -77,7 +77,7 @@
     justify-content: center;
   }
 
-  .vpuy9menulist ul {
+  .ws4tlmenulist ul {
     width: 100%;
     list-style-type: none;
     display: flex;
@@ -87,7 +87,7 @@
     overflow-x: auto;
   }
 
-  .vpuy9menulist ul a {
+  .ws4tlmenulist ul a {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -99,14 +99,14 @@
     white-space: nowrap;
   }
 
-  .vpuy9menulist ul a:hover {
+  .ws4tlmenulist ul a:hover {
     background-color: #e0e0e0;
     border-radius: 5px;
     color: #000;
     cursor: pointer;
   }
 
-  .vpuy9menuitem {
+  .ws4tlmenuitem {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -118,30 +118,30 @@
     white-space: nowrap;
   }
 
-  .vpuy9menuactive {
+  .ws4tlmenuactive {
     background-color: #e0e0e0 !important;
     border-radius: 5px;
     color: #000 !important;
     font-weight: bold;
   }
 
-  .vpuy9bodylogo {
+  .ws4tlbodylogo {
     height: 100px;
     max-width: 90vw;
   }
 
   @media screen and (min-width: 1024px) {
-    .vpuy9menumobil {
+    .ws4tlmenumobil {
       display: none !important;
     }
 
-    .vpuy9menulist {
+    .ws4tlmenulist {
       display: flex !important;
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .vpuy9menumobil {
+    .ws4tlmenumobil {
       display: flex;
       align-items: center;
       justify-content: end;
@@ -149,22 +149,22 @@
       width: 100%;
     }
 
-    .vpuy9menumobil div {
+    .ws4tlmenumobil div {
       font-size: 32px;
       color: #fff;
       padding: 5px;
     }
 
-    .vpuy9menulist {
+    .ws4tlmenulist {
       display: none;
     }
 
-    .vpuy9body {
+    .ws4tlbody {
       flex-direction: column;
       gap: 20px;
     }
 
-    .vpuy9Children {
+    .ws4tlChildren {
       width: 100%;
       gap: 0px;
       flex-direction: column;
@@ -172,19 +172,19 @@
       justify-content: center;
     }
 
-    .vpuy9menulist ul a {
+    .ws4tlmenulist ul a {
       padding: 10px 0px 10px 0px;
     }
 
-    .vpuy9menu {
+    .ws4tlmenu {
       overflow-x: auto;
     }
 
-    .vpuy9menulist ul {
+    .ws4tlmenulist ul {
       flex-direction: column;
     }
 
-    .vpuy9bodylogo {
+    .ws4tlbodylogo {
       max-height: 50vw;
       max-width: 50vw;
       max-height: 100px;
@@ -192,7 +192,7 @@
   }
 
   @media screen and (max-width: 768px) {
-    .vpuy9menulist ul a {
+    .ws4tlmenulist ul a {
       font-size: 14px;
     }
   }
