--- a/tr/gizlilik-politikasi/style.css
+++ b/tr/gizlilik-politikasi/style.css
@@ -1,17 +1,17 @@
 
-  .q21cgmenumobil {
+  .szd5imenumobil {
     display: none;
     cursor: pointer;
   }
 
-  .q21cgChildren {
+  .szd5iChildren {
     display: flex;
     width: var(--max);
     gap: 15px;
     align-items: end;
   }
 
-  .q21cg {
+  .szd5i {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -20,7 +20,7 @@
     background-color: #e9e9e9;
   }
 
-  .q21cgtitle {
+  .szd5ititle {
     width: 100%;
     background-color: #333;
     display: flex;
@@ -28,7 +28,7 @@
     justify-content: center;
   }
 
-  .q21cgtitlebody {
+  .szd5ititlebody {
     color: #fff;
     width: var(--max);
     display: flex;
@@ -36,31 +36,31 @@
     padding: 10px 0px 10px 0px;
   }
 
-  .q21cgtitlebodytitle {
+  .szd5ititlebodytitle {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: left;
   }
 
-  .q21cgtitlebodylang {
+  .szd5ititlebodylang {
     width: auto;
     margin: -5px 0px -5px 0px;
   }
 
-  .q21cgtitlebodylang ul {
+  .szd5ititlebodylang ul {
     display: flex;
     gap: 5px;
   }
 
-  .q21cgbody {
+  .szd5ibody {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 5px 0px 5px 0px;
   }
 
-  .q21cgmenulist {
+  .szd5imenulist {
     display: block;
     background-color: #279c90;
     padding: 10px;
@@ -69,7 +69,7 @@
     width: 100%;
   }
 
-  .q21cgmenubody {
+  .szd5imenubody {
     width: 100%;
     background-color: #279c90;
     display: flex;
@@ -77,7 +77,7 @@
     justify-content: center;
   }
 
-  .q21cgmenulist ul {
+  .szd5imenulist ul {
     width: 100%;
     list-style-type: none;
     display: flex;
@@ -87,7 +87,7 @@
     overflow-x: auto;
   }
 
-  .q21cgmenulist ul a {
+  .szd5imenulist ul a {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -99,14 +99,14 @@
     white-space: nowrap;
   }
 
-  .q21cgmenulist ul a:hover {
+  .szd5imenulist ul a:hover {
     background-color: #e0e0e0;
     border-radius: 5px;
     color: #000;
     cursor: pointer;
   }
 
-  .q21cgmenuitem {
+  .szd5imenuitem {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -118,30 +118,30 @@
     white-space: nowrap;
   }
 
-  .q21cgmenuactive {
+  .szd5imenuactive {
     background-color: #e0e0e0 !important;
     border-radius: 5px;
     color: #000 !important;
     font-weight: bold;
   }
 
-  .q21cgbodylogo {
+  .szd5ibodylogo {
     height: 100px;
     max-width: 90vw;
   }
 
   @media screen and (min-width: 1024px) {
-    .q21cgmenumobil {
+    .szd5imenumobil {
       display: none !important;
     }
 
-    .q21cgmenulist {
+    .szd5imenulist {
       display: flex !important;
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .q21cgmenumobil {
+    .szd5imenumobil {
       display: flex;
       align-items: center;
       justify-content: end;
@@ -149,22 +149,22 @@
       width: 100%;
     }
 
-    .q21cgmenumobil div {
+    .szd5imenumobil div {
       font-size: 32px;
       color: #fff;
       padding: 5px;
     }
 
-    .q21cgmenulist {
+    .szd5imenulist {
       display: none;
     }
 
-    .q21cgbody {
+    .szd5ibody {
       flex-direction: column;
       gap: 20px;
     }
 
-    .q21cgChildren {
+    .szd5iChildren {
       width: 100%;
       gap: 0px;
       flex-direction: column;
@@ -172,19 +172,19 @@
       justify-content: center;
     }
 
-    .q21cgmenulist ul a {
+    .szd5imenulist ul a {
       padding: 10px 0px 10px 0px;
     }
 
-    .q21cgmenu {
+    .szd5imenu {
       overflow-x: auto;
     }
 
-    .q21cgmenulist ul {
+    .szd5imenulist ul {
       flex-direction: column;
     }
 
-    .q21cgbodylogo {
+    .szd5ibodylogo {
       max-height: 50vw;
       max-width: 50vw;
       max-height: 100px;
@@ -192,7 +192,7 @@
   }
 
   @media screen and (max-width: 768px) {
-    .q21cgmenulist ul a {
+    .szd5imenulist ul a {
       font-size: 14px;
     }
   }
@@ -202,7 +202,7 @@
     justify-content: start;
   }
 
-  .cfmg5 {
+  .djhc0 {
     width: var(--max);
     margin-top: 20px;
     gap: 10px;
@@ -210,7 +210,7 @@
     position: relative;
   }
 
-  .cfmg5-menu-btn {
+  .djhc0-menu-btn {
     display: none;
     background-color: #000;
     padding: 10px 20px;
@@ -222,11 +222,11 @@
     align-items: center;
   }
 
-  .cfmg5-menu-btn i {
+  .djhc0-menu-btn i {
     font-size: 20px;
   }
 
-  .cfmg5-menu {
+  .djhc0-menu {
     width: 200px;
     background-color: #f9f9f9;
     border-radius: 5px;
@@ -237,28 +237,28 @@
     float: left;
   }
 
-  .cfmg5-desc {
+  .djhc0-desc {
     display: flex;
     flex-direction: column;
     gap: 10px;
     float: right;
   }
 
-  .cfmg5-menu > a {
+  .djhc0-menu > a {
     background-color: #fff;
     padding: 10px;
     float: left;
     border-radius: 5px;
   }
 
-  .cfmg5-menu > .active,
-  .cfmg5-menu > a:hover {
+  .djhc0-menu > .active,
+  .djhc0-menu > a:hover {
     background-color: #000;
     color: #fff;
     display: flex;
   }
 
-  .cfmg5-desc-menu {
+  .djhc0-desc-menu {
     width: 200px;
     background-color: #000;
     display: flex;
@@ -266,19 +266,19 @@
     border-radius: 5px;
   }
 
-  .cfmg5-desc-menu > div {
+  .djhc0-desc-menu > div {
     padding: 5px;
     border-radius: 5px;
     background-color: #fff;
     margin: 5px;
   }
 
-  .cfmg5-desc-body {
+  .djhc0-desc-body {
     display: flex;
     justify-content: space-between;
   }
 
-  .cfmg5-title {
+  .djhc0-title {
     width: 100%;
     height: 150px;
     background-color: #000;
@@ -291,7 +291,7 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
 
-  .cfmg5-title::before {
+  .djhc0-title::before {
     content: "";
     position: absolute;
     top: 0;
@@ -306,44 +306,44 @@
     z-index: 1;
   }
 
-  .cfmg5-title span {
+  .djhc0-title span {
     position: relative;
     z-index: 2;
     font-size: 30px;
   }
 
-  .cfmg5-body {
+  .djhc0-body {
     display: flex;
     flex-direction: column;
     gap: 10px;
     text-align: left;
   }
 
-  .cfmg5-img {
+  .djhc0-img {
     display: flex;
     align-items: center;
     justify-content: center;
     width: calc(var(--max) - 460px);
   }
 
-  .cfmg5-img img {
+  .djhc0-img img {
     width: 100%;
   }
 
   @media screen and (min-width: 1024px) {
-    .cfmg5-desc {
+    .djhc0-desc {
       width: calc(var(--max) - 240px);
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .cfmg5-menu-btn {
+    .djhc0-menu-btn {
       display: flex;
       width: calc(100% - 55px);
       margin-left: 5px;
     }
 
-    .cfmg5 {
+    .djhc0 {
       display: flex;
       flex-direction: column;
       width: 100%;
@@ -352,17 +352,17 @@
       margin-top: 0px;
     }
 
-    .cfmg5-img {
+    .djhc0-img {
       width: 100%;
     }
 
-    .cfmg5-body {
+    .djhc0-body {
       width: 100%;
       order: 3;
       padding: 10px;
     }
 
-    .cfmg5-menu {
+    .djhc0-menu {
       width: 100%;
       float: none;
       flex-direction: column;
@@ -370,11 +370,11 @@
       display: none;
     }
 
-    .cfmg5-menu.active {
+    .djhc0-menu.active {
       display: flex;
     }
 
-    .cfmg5-desc {
+    .djhc0-desc {
       width: 100% !important;
       order: 2;
     }
