--- a/tr/hizmetlerimiz/style.css
+++ b/tr/hizmetlerimiz/style.css
@@ -1,17 +1,17 @@
 
-  .h48o4menumobil {
+  .ypkc9menumobil {
     display: none;
     cursor: pointer;
   }
 
-  .h48o4Children {
+  .ypkc9Children {
     display: flex;
     width: var(--max);
     gap: 15px;
     align-items: end;
   }
 
-  .h48o4 {
+  .ypkc9 {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -20,7 +20,7 @@
     background-color: #e9e9e9;
   }
 
-  .h48o4title {
+  .ypkc9title {
     width: 100%;
     background-color: #333;
     display: flex;
@@ -28,7 +28,7 @@
     justify-content: center;
   }
 
-  .h48o4titlebody {
+  .ypkc9titlebody {
     color: #fff;
     width: var(--max);
     display: flex;
@@ -36,31 +36,31 @@
     padding: 10px 0px 10px 0px;
   }
 
-  .h48o4titlebodytitle {
+  .ypkc9titlebodytitle {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: left;
   }
 
-  .h48o4titlebodylang {
+  .ypkc9titlebodylang {
     width: auto;
     margin: -5px 0px -5px 0px;
   }
 
-  .h48o4titlebodylang ul {
+  .ypkc9titlebodylang ul {
     display: flex;
     gap: 5px;
   }
 
-  .h48o4body {
+  .ypkc9body {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 5px 0px 5px 0px;
   }
 
-  .h48o4menulist {
+  .ypkc9menulist {
     display: block;
     background-color: #279c90;
     padding: 10px;
@@ -69,7 +69,7 @@
     width: 100%;
   }
 
-  .h48o4menubody {
+  .ypkc9menubody {
     width: 100%;
     background-color: #279c90;
     display: flex;
@@ -77,7 +77,7 @@
     justify-content: center;
   }
 
-  .h48o4menulist ul {
+  .ypkc9menulist ul {
     width: 100%;
     list-style-type: none;
     display: flex;
@@ -87,7 +87,7 @@
     overflow-x: auto;
   }
 
-  .h48o4menulist ul a {
+  .ypkc9menulist ul a {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -99,14 +99,14 @@
     white-space: nowrap;
   }
 
-  .h48o4menulist ul a:hover {
+  .ypkc9menulist ul a:hover {
     background-color: #e0e0e0;
     border-radius: 5px;
     color: #000;
     cursor: pointer;
   }
 
-  .h48o4menuitem {
+  .ypkc9menuitem {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -118,30 +118,30 @@
     white-space: nowrap;
   }
 
-  .h48o4menuactive {
+  .ypkc9menuactive {
     background-color: #e0e0e0 !important;
     border-radius: 5px;
     color: #000 !important;
     font-weight: bold;
   }
 
-  .h48o4bodylogo {
+  .ypkc9bodylogo {
     height: 100px;
     max-width: 90vw;
   }
 
   @media screen and (min-width: 1024px) {
-    .h48o4menumobil {
+    .ypkc9menumobil {
       display: none !important;
     }
 
-    .h48o4menulist {
+    .ypkc9menulist {
       display: flex !important;
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .h48o4menumobil {
+    .ypkc9menumobil {
       display: flex;
       align-items: center;
       justify-content: end;
@@ -149,22 +149,22 @@
       width: 100%;
     }
 
-    .h48o4menumobil div {
+    .ypkc9menumobil div {
       font-size: 32px;
       color: #fff;
       padding: 5px;
     }
 
-    .h48o4menulist {
+    .ypkc9menulist {
       display: none;
     }
 
-    .h48o4body {
+    .ypkc9body {
       flex-direction: column;
       gap: 20px;
     }
 
-    .h48o4Children {
+    .ypkc9Children {
       width: 100%;
       gap: 0px;
       flex-direction: column;
@@ -172,19 +172,19 @@
       justify-content: center;
     }
 
-    .h48o4menulist ul a {
+    .ypkc9menulist ul a {
       padding: 10px 0px 10px 0px;
     }
 
-    .h48o4menu {
+    .ypkc9menu {
       overflow-x: auto;
     }
 
-    .h48o4menulist ul {
+    .ypkc9menulist ul {
       flex-direction: column;
     }
 
-    .h48o4bodylogo {
+    .ypkc9bodylogo {
       max-height: 50vw;
       max-width: 50vw;
       max-height: 100px;
@@ -192,24 +192,24 @@
   }
 
   @media screen and (max-width: 768px) {
-    .h48o4menulist ul a {
+    .ypkc9menulist ul a {
       font-size: 14px;
     }
   }
 
 
-  .g6j7r {
+  .hxman {
     width: 100%;
     margin: 15px 0;
   }
 
-  .g6j7rbody {
+  .hxmanbody {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 15px;
   }
 
-  .g6j7rbodyitem {
+  .hxmanbodyitem {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -220,7 +220,7 @@
     position: relative;
   }
 
-  .g6j7rbodyitemlink {
+  .hxmanbodyitemlink {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -229,7 +229,7 @@
     gap: 10px;
   }
 
-  .g6j7rbodyitemimg {
+  .hxmanbodyitemimg {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -240,18 +240,18 @@
     transition: all 0.3s ease;
   }
 
-  .g6j7rbodyitemimg:hover {
+  .hxmanbodyitemimg:hover {
     box-shadow: 0 15px 35px rgba(0, 0, 0, 0.5);
     transform: translateY(-5px);
   }
 
-  .g6j7rbodyitemimg img {
+  .hxmanbodyitemimg img {
     max-height: 200px;
     max-width: calc(200px * 2);
     border-radius: 10px;
   }
 
-  .g6j7rbodyitemtitle {
+  .hxmanbodyitemtitle {
     padding: 5px;
     display: flex;
     height: calc(18px * 2);
@@ -262,7 +262,7 @@
     color: #fff;
   }
 
-  .g6j7rbodybg {
+  .hxmanbodybg {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -273,7 +273,7 @@
     opacity: 0.5;
   }
 
-  .g6j7rbodyitems {
+  .hxmanbodyitems {
     padding: 5px;
     display: flex;
     flex-direction: column;
@@ -284,25 +284,25 @@
     position: relative;
   }
 
-  .g6j7rbodyitems.left {
+  .hxmanbodyitems.left {
     align-self: flex-start;
     border-radius: 0px 10px 10px 0px;
     transform: translateY(60px);
     animation: slideInLeft 1s forwards;
   }
 
-  .g6j7rbodyitems.right {
+  .hxmanbodyitems.right {
     align-self: flex-end;
     border-radius: 10px 0px 0px 10px;
     transform: translateY(60px);
     animation: slideInRight 1s forwards;
   }
 
-  .g6j7rbodyitem.lefts {
+  .hxmanbodyitem.lefts {
     align-self: flex-end;
   }
 
-  .g6j7rbodyitem.rights {
+  .hxmanbodyitem.rights {
     align-self: flex-start;
   }
 
@@ -330,18 +330,18 @@
     }
   }
 
-  .g6j7rbodyitems {
+  .hxmanbodyitems {
     animation-delay: 0.3s;
   }
 
  
 
   @media screen and (max-width: 1024px) {
-    .g6j7rbodyitem {
+    .hxmanbodyitem {
       width: 100%;
     }
 
-    .g6j7rbody {
+    .hxmanbody {
       display: flex;
       flex-direction: column;
       gap: 15px;
