--- a/tr/iletisim/style.css
+++ b/tr/iletisim/style.css
@@ -1,17 +1,17 @@
 
-  .xeoazmenumobil {
+  .c4gzymenumobil {
     display: none;
     cursor: pointer;
   }
 
-  .xeoazChildren {
+  .c4gzyChildren {
     display: flex;
     width: var(--max);
     gap: 15px;
     align-items: end;
   }
 
-  .xeoaz {
+  .c4gzy {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -20,7 +20,7 @@
     background-color: #e9e9e9;
   }
 
-  .xeoaztitle {
+  .c4gzytitle {
     width: 100%;
     background-color: #333;
     display: flex;
@@ -28,7 +28,7 @@
     justify-content: center;
   }
 
-  .xeoaztitlebody {
+  .c4gzytitlebody {
     color: #fff;
     width: var(--max);
     display: flex;
@@ -36,31 +36,31 @@
     padding: 10px 0px 10px 0px;
   }
 
-  .xeoaztitlebodytitle {
+  .c4gzytitlebodytitle {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: left;
   }
 
-  .xeoaztitlebodylang {
+  .c4gzytitlebodylang {
     width: auto;
     margin: -5px 0px -5px 0px;
   }
 
-  .xeoaztitlebodylang ul {
+  .c4gzytitlebodylang ul {
     display: flex;
     gap: 5px;
   }
 
-  .xeoazbody {
+  .c4gzybody {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 5px 0px 5px 0px;
   }
 
-  .xeoazmenulist {
+  .c4gzymenulist {
     display: block;
     background-color: #279c90;
     padding: 10px;
@@ -69,7 +69,7 @@
     width: 100%;
   }
 
-  .xeoazmenubody {
+  .c4gzymenubody {
     width: 100%;
     background-color: #279c90;
     display: flex;
@@ -77,7 +77,7 @@
     justify-content: center;
   }
 
-  .xeoazmenulist ul {
+  .c4gzymenulist ul {
     width: 100%;
     list-style-type: none;
     display: flex;
@@ -87,7 +87,7 @@
     overflow-x: auto;
   }
 
-  .xeoazmenulist ul a {
+  .c4gzymenulist ul a {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -99,14 +99,14 @@
     white-space: nowrap;
   }
 
-  .xeoazmenulist ul a:hover {
+  .c4gzymenulist ul a:hover {
     background-color: #e0e0e0;
     border-radius: 5px;
     color: #000;
     cursor: pointer;
   }
 
-  .xeoazmenuitem {
+  .c4gzymenuitem {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -118,30 +118,30 @@
     white-space: nowrap;
   }
 
-  .xeoazmenuactive {
+  .c4gzymenuactive {
     background-color: #e0e0e0 !important;
     border-radius: 5px;
     color: #000 !important;
     font-weight: bold;
   }
 
-  .xeoazbodylogo {
+  .c4gzybodylogo {
     height: 100px;
     max-width: 90vw;
   }
 
   @media screen and (min-width: 1024px) {
-    .xeoazmenumobil {
+    .c4gzymenumobil {
       display: none !important;
     }
 
-    .xeoazmenulist {
+    .c4gzymenulist {
       display: flex !important;
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .xeoazmenumobil {
+    .c4gzymenumobil {
       display: flex;
       align-items: center;
       justify-content: end;
@@ -149,22 +149,22 @@
       width: 100%;
     }
 
-    .xeoazmenumobil div {
+    .c4gzymenumobil div {
       font-size: 32px;
       color: #fff;
       padding: 5px;
     }
 
-    .xeoazmenulist {
+    .c4gzymenulist {
       display: none;
     }
 
-    .xeoazbody {
+    .c4gzybody {
       flex-direction: column;
       gap: 20px;
     }
 
-    .xeoazChildren {
+    .c4gzyChildren {
       width: 100%;
       gap: 0px;
       flex-direction: column;
@@ -172,19 +172,19 @@
       justify-content: center;
     }
 
-    .xeoazmenulist ul a {
+    .c4gzymenulist ul a {
       padding: 10px 0px 10px 0px;
     }
 
-    .xeoazmenu {
+    .c4gzymenu {
       overflow-x: auto;
     }
 
-    .xeoazmenulist ul {
+    .c4gzymenulist ul {
       flex-direction: column;
     }
 
-    .xeoazbodylogo {
+    .c4gzybodylogo {
       max-height: 50vw;
       max-width: 50vw;
       max-height: 100px;
@@ -192,13 +192,13 @@
   }
 
   @media screen and (max-width: 768px) {
-    .xeoazmenulist ul a {
+    .c4gzymenulist ul a {
       font-size: 14px;
     }
   }
 
 
-  .m4c4d {
+  .y7ou2 {
     width: 100%;
     margin: 30px 0px 30px 0px;
     display: flex;
@@ -207,14 +207,14 @@
     position: relative;
   }
 
-  .m4c4dcontainertitle {
+  .y7ou2containertitle {
     font-size: 28px;
     font-weight: bold;
     color: #333;
     margin-bottom: 20px;
   }
 
-  .m4c4dcontainerlist {
+  .y7ou2containerlist {
     padding: 10px;
     display: flex;
     border-radius: 8px;
@@ -223,26 +223,26 @@
     transition: background-color 0.3s ease;
   }
 
-  .m4c4dcontainerlist>div {
+  .y7ou2containerlist>div {
     display: flex;
     align-items: center;
     font-size: 20px;
     color: #444;
   }
 
-  .m4c4dcontainerlist:hover {
+  .y7ou2containerlist:hover {
     background-color: #f9f9f9;
     border-bottom-color: #1e3046;
   }
 
-  .m4c4dcontainer {
+  .y7ou2container {
     display: flex;
     flex-direction: column;
     gap: 15px;
     padding: 20px;
   }
 
-  .m4c4dcontainerbody {
+  .y7ou2containerbody {
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -252,7 +252,7 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   }
 
-  .m4c4dbody {
+  .y7ou2body {
     width: calc(var(--max) - 40px);
     background-color: #ebebeb;
     border: 1px solid #dedede;
@@ -260,19 +260,19 @@
     padding: 20px;
   }
 
-  .m4c4dcontainerlist>span {
+  .y7ou2containerlist>span {
     font-size: 24px;
     color: #1e3046;
   }
 
   @media screen and (max-width: 1024px) {
-    .m4c4dbody {
+    .y7ou2body {
       width: 100%;
       padding: 20px;
       flex-direction: column;
     }
 
-    .m4c4dcontainerbody {
+    .y7ou2containerbody {
       padding: 15px;
     }
   }
@@ -302,13 +302,13 @@
       transform: scale(1);
     }
   }
-  .xtde0-body {
+  .h4yof-body {
     display: flex;
     align-items: center;
     justify-content: center;
     width: var(--max);
   }
-  .xtde0-body-chile {
+  .h4yof-body-chile {
     padding: 20px;
     display: flex;
     align-items: top;
@@ -316,10 +316,10 @@
     flex-direction: column;
     position: absolute;
   }
-  .xtde0-body-chile > div {
+  .h4yof-body-chile > div {
     width: 100% !important;
   }
-  .xtde02 {
+  .h4yof2 {
     margin-top: 10px;
     margin-bottom: 10px;
     position: relative;
@@ -330,21 +330,21 @@
     overflow: hidden;
     cursor: pointer;
   }
-  .xtde0 {
+  .h4yof {
     display: flex;
     flex-direction: column;
   }
-  .xtde0 > svg {
+  .h4yof > svg {
     width: 100vw;
   }
-  .xtde0botton {
+  .h4yofbotton {
     transform: scaleY(-1);
     margin-bottom: -1px;
   }
-  .xtde0-svg {
+  .h4yof-svg {
     fill: #fff;
   }
-  .xtde0-bg {
+  .h4yof-bg {
     background-image: url("/img/rx7j2a/map.png?v={{random}}") !important;
     background-size: cover;
     background-position: center center;
