--- a/tr/kalite-politikamiz/style.css
+++ b/tr/kalite-politikamiz/style.css
@@ -1,17 +1,17 @@
 
-  .s62ezmenumobil {
+  .ul4ilmenumobil {
     display: none;
     cursor: pointer;
   }
 
-  .s62ezChildren {
+  .ul4ilChildren {
     display: flex;
     width: var(--max);
     gap: 15px;
     align-items: end;
   }
 
-  .s62ez {
+  .ul4il {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -20,7 +20,7 @@
     background-color: #e9e9e9;
   }
 
-  .s62eztitle {
+  .ul4iltitle {
     width: 100%;
     background-color: #333;
     display: flex;
@@ -28,7 +28,7 @@
     justify-content: center;
   }
 
-  .s62eztitlebody {
+  .ul4iltitlebody {
     color: #fff;
     width: var(--max);
     display: flex;
@@ -36,31 +36,31 @@
     padding: 10px 0px 10px 0px;
   }
 
-  .s62eztitlebodytitle {
+  .ul4iltitlebodytitle {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: left;
   }
 
-  .s62eztitlebodylang {
+  .ul4iltitlebodylang {
     width: auto;
     margin: -5px 0px -5px 0px;
   }
 
-  .s62eztitlebodylang ul {
+  .ul4iltitlebodylang ul {
     display: flex;
     gap: 5px;
   }
 
-  .s62ezbody {
+  .ul4ilbody {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 5px 0px 5px 0px;
   }
 
-  .s62ezmenulist {
+  .ul4ilmenulist {
     display: block;
     background-color: #279c90;
     padding: 10px;
@@ -69,7 +69,7 @@
     width: 100%;
   }
 
-  .s62ezmenubody {
+  .ul4ilmenubody {
     width: 100%;
     background-color: #279c90;
     display: flex;
@@ -77,7 +77,7 @@
     justify-content: center;
   }
 
-  .s62ezmenulist ul {
+  .ul4ilmenulist ul {
     width: 100%;
     list-style-type: none;
     display: flex;
@@ -87,7 +87,7 @@
     overflow-x: auto;
   }
 
-  .s62ezmenulist ul a {
+  .ul4ilmenulist ul a {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -99,14 +99,14 @@
     white-space: nowrap;
   }
 
-  .s62ezmenulist ul a:hover {
+  .ul4ilmenulist ul a:hover {
     background-color: #e0e0e0;
     border-radius: 5px;
     color: #000;
     cursor: pointer;
   }
 
-  .s62ezmenuitem {
+  .ul4ilmenuitem {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -118,30 +118,30 @@
     white-space: nowrap;
   }
 
-  .s62ezmenuactive {
+  .ul4ilmenuactive {
     background-color: #e0e0e0 !important;
     border-radius: 5px;
     color: #000 !important;
     font-weight: bold;
   }
 
-  .s62ezbodylogo {
+  .ul4ilbodylogo {
     height: 100px;
     max-width: 90vw;
   }
 
   @media screen and (min-width: 1024px) {
-    .s62ezmenumobil {
+    .ul4ilmenumobil {
       display: none !important;
     }
 
-    .s62ezmenulist {
+    .ul4ilmenulist {
       display: flex !important;
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .s62ezmenumobil {
+    .ul4ilmenumobil {
       display: flex;
       align-items: center;
       justify-content: end;
@@ -149,22 +149,22 @@
       width: 100%;
     }
 
-    .s62ezmenumobil div {
+    .ul4ilmenumobil div {
       font-size: 32px;
       color: #fff;
       padding: 5px;
     }
 
-    .s62ezmenulist {
+    .ul4ilmenulist {
       display: none;
     }
 
-    .s62ezbody {
+    .ul4ilbody {
       flex-direction: column;
       gap: 20px;
     }
 
-    .s62ezChildren {
+    .ul4ilChildren {
       width: 100%;
       gap: 0px;
       flex-direction: column;
@@ -172,19 +172,19 @@
       justify-content: center;
     }
 
-    .s62ezmenulist ul a {
+    .ul4ilmenulist ul a {
       padding: 10px 0px 10px 0px;
     }
 
-    .s62ezmenu {
+    .ul4ilmenu {
       overflow-x: auto;
     }
 
-    .s62ezmenulist ul {
+    .ul4ilmenulist ul {
       flex-direction: column;
     }
 
-    .s62ezbodylogo {
+    .ul4ilbodylogo {
       max-height: 50vw;
       max-width: 50vw;
       max-height: 100px;
@@ -192,7 +192,7 @@
   }
 
   @media screen and (max-width: 768px) {
-    .s62ezmenulist ul a {
+    .ul4ilmenulist ul a {
       font-size: 14px;
     }
   }
@@ -202,7 +202,7 @@
     justify-content: start;
   }
 
-  .taagt {
+  .c69d6 {
     width: var(--max);
     margin-top: 20px;
     gap: 10px;
@@ -210,7 +210,7 @@
     position: relative;
   }
 
-  .taagt-menu-btn {
+  .c69d6-menu-btn {
     display: none;
     background-color: #000;
     padding: 10px 20px;
@@ -222,11 +222,11 @@
     align-items: center;
   }
 
-  .taagt-menu-btn i {
+  .c69d6-menu-btn i {
     font-size: 20px;
   }
 
-  .taagt-menu {
+  .c69d6-menu {
     width: 200px;
     background-color: #f9f9f9;
     border-radius: 5px;
@@ -237,28 +237,28 @@
     float: left;
   }
 
-  .taagt-desc {
+  .c69d6-desc {
     display: flex;
     flex-direction: column;
     gap: 10px;
     float: right;
   }
 
-  .taagt-menu > a {
+  .c69d6-menu > a {
     background-color: #fff;
     padding: 10px;
     float: left;
     border-radius: 5px;
   }
 
-  .taagt-menu > .active,
-  .taagt-menu > a:hover {
+  .c69d6-menu > .active,
+  .c69d6-menu > a:hover {
     background-color: #000;
     color: #fff;
     display: flex;
   }
 
-  .taagt-desc-menu {
+  .c69d6-desc-menu {
     width: 200px;
     background-color: #000;
     display: flex;
@@ -266,19 +266,19 @@
     border-radius: 5px;
   }
 
-  .taagt-desc-menu > div {
+  .c69d6-desc-menu > div {
     padding: 5px;
     border-radius: 5px;
     background-color: #fff;
     margin: 5px;
   }
 
-  .taagt-desc-body {
+  .c69d6-desc-body {
     display: flex;
     justify-content: space-between;
   }
 
-  .taagt-title {
+  .c69d6-title {
     width: 100%;
     height: 150px;
     background-color: #000;
@@ -291,7 +291,7 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
 
-  .taagt-title::before {
+  .c69d6-title::before {
     content: "";
     position: absolute;
     top: 0;
@@ -306,44 +306,44 @@
     z-index: 1;
   }
 
-  .taagt-title span {
+  .c69d6-title span {
     position: relative;
     z-index: 2;
     font-size: 30px;
   }
 
-  .taagt-body {
+  .c69d6-body {
     display: flex;
     flex-direction: column;
     gap: 10px;
     text-align: left;
   }
 
-  .taagt-img {
+  .c69d6-img {
     display: flex;
     align-items: center;
     justify-content: center;
     width: calc(var(--max) - 460px);
   }
 
-  .taagt-img img {
+  .c69d6-img img {
     width: 100%;
   }
 
   @media screen and (min-width: 1024px) {
-    .taagt-desc {
+    .c69d6-desc {
       width: calc(var(--max) - 240px);
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .taagt-menu-btn {
+    .c69d6-menu-btn {
       display: flex;
       width: calc(100% - 55px);
       margin-left: 5px;
     }
 
-    .taagt {
+    .c69d6 {
       display: flex;
       flex-direction: column;
       width: 100%;
@@ -352,17 +352,17 @@
       margin-top: 0px;
     }
 
-    .taagt-img {
+    .c69d6-img {
       width: 100%;
     }
 
-    .taagt-body {
+    .c69d6-body {
       width: 100%;
       order: 3;
       padding: 10px;
     }
 
-    .taagt-menu {
+    .c69d6-menu {
       width: 100%;
       float: none;
       flex-direction: column;
@@ -370,11 +370,11 @@
       display: none;
     }
 
-    .taagt-menu.active {
+    .c69d6-menu.active {
       display: flex;
     }
 
-    .taagt-desc {
+    .c69d6-desc {
       width: 100% !important;
       order: 2;
     }
