--- a/tr/kisisel-veriler/style.css
+++ b/tr/kisisel-veriler/style.css
@@ -1,17 +1,17 @@
 
-  .xwqrvmenumobil {
+  .uv0samenumobil {
     display: none;
     cursor: pointer;
   }
 
-  .xwqrvChildren {
+  .uv0saChildren {
     display: flex;
     width: var(--max);
     gap: 15px;
     align-items: end;
   }
 
-  .xwqrv {
+  .uv0sa {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -20,7 +20,7 @@
     background-color: #e9e9e9;
   }
 
-  .xwqrvtitle {
+  .uv0satitle {
     width: 100%;
     background-color: #333;
     display: flex;
@@ -28,7 +28,7 @@
     justify-content: center;
   }
 
-  .xwqrvtitlebody {
+  .uv0satitlebody {
     color: #fff;
     width: var(--max);
     display: flex;
@@ -36,31 +36,31 @@
     padding: 10px 0px 10px 0px;
   }
 
-  .xwqrvtitlebodytitle {
+  .uv0satitlebodytitle {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: left;
   }
 
-  .xwqrvtitlebodylang {
+  .uv0satitlebodylang {
     width: auto;
     margin: -5px 0px -5px 0px;
   }
 
-  .xwqrvtitlebodylang ul {
+  .uv0satitlebodylang ul {
     display: flex;
     gap: 5px;
   }
 
-  .xwqrvbody {
+  .uv0sabody {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 5px 0px 5px 0px;
   }
 
-  .xwqrvmenulist {
+  .uv0samenulist {
     display: block;
     background-color: #279c90;
     padding: 10px;
@@ -69,7 +69,7 @@
     width: 100%;
   }
 
-  .xwqrvmenubody {
+  .uv0samenubody {
     width: 100%;
     background-color: #279c90;
     display: flex;
@@ -77,7 +77,7 @@
     justify-content: center;
   }
 
-  .xwqrvmenulist ul {
+  .uv0samenulist ul {
     width: 100%;
     list-style-type: none;
     display: flex;
@@ -87,7 +87,7 @@
     overflow-x: auto;
   }
 
-  .xwqrvmenulist ul a {
+  .uv0samenulist ul a {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -99,14 +99,14 @@
     white-space: nowrap;
   }
 
-  .xwqrvmenulist ul a:hover {
+  .uv0samenulist ul a:hover {
     background-color: #e0e0e0;
     border-radius: 5px;
     color: #000;
     cursor: pointer;
   }
 
-  .xwqrvmenuitem {
+  .uv0samenuitem {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -118,30 +118,30 @@
     white-space: nowrap;
   }
 
-  .xwqrvmenuactive {
+  .uv0samenuactive {
     background-color: #e0e0e0 !important;
     border-radius: 5px;
     color: #000 !important;
     font-weight: bold;
   }
 
-  .xwqrvbodylogo {
+  .uv0sabodylogo {
     height: 100px;
     max-width: 90vw;
   }
 
   @media screen and (min-width: 1024px) {
-    .xwqrvmenumobil {
+    .uv0samenumobil {
       display: none !important;
     }
 
-    .xwqrvmenulist {
+    .uv0samenulist {
       display: flex !important;
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .xwqrvmenumobil {
+    .uv0samenumobil {
       display: flex;
       align-items: center;
       justify-content: end;
@@ -149,22 +149,22 @@
       width: 100%;
     }
 
-    .xwqrvmenumobil div {
+    .uv0samenumobil div {
       font-size: 32px;
       color: #fff;
       padding: 5px;
     }
 
-    .xwqrvmenulist {
+    .uv0samenulist {
       display: none;
     }
 
-    .xwqrvbody {
+    .uv0sabody {
       flex-direction: column;
       gap: 20px;
     }
 
-    .xwqrvChildren {
+    .uv0saChildren {
       width: 100%;
       gap: 0px;
       flex-direction: column;
@@ -172,19 +172,19 @@
       justify-content: center;
     }
 
-    .xwqrvmenulist ul a {
+    .uv0samenulist ul a {
       padding: 10px 0px 10px 0px;
     }
 
-    .xwqrvmenu {
+    .uv0samenu {
       overflow-x: auto;
     }
 
-    .xwqrvmenulist ul {
+    .uv0samenulist ul {
       flex-direction: column;
     }
 
-    .xwqrvbodylogo {
+    .uv0sabodylogo {
       max-height: 50vw;
       max-width: 50vw;
       max-height: 100px;
@@ -192,7 +192,7 @@
   }
 
   @media screen and (max-width: 768px) {
-    .xwqrvmenulist ul a {
+    .uv0samenulist ul a {
       font-size: 14px;
     }
   }
@@ -202,7 +202,7 @@
     justify-content: start;
   }
 
-  .tqarp {
+  .hg7k9 {
     width: var(--max);
     margin-top: 20px;
     gap: 10px;
@@ -210,7 +210,7 @@
     position: relative;
   }
 
-  .tqarp-menu-btn {
+  .hg7k9-menu-btn {
     display: none;
     background-color: #000;
     padding: 10px 20px;
@@ -222,11 +222,11 @@
     align-items: center;
   }
 
-  .tqarp-menu-btn i {
+  .hg7k9-menu-btn i {
     font-size: 20px;
   }
 
-  .tqarp-menu {
+  .hg7k9-menu {
     width: 200px;
     background-color: #f9f9f9;
     border-radius: 5px;
@@ -237,28 +237,28 @@
     float: left;
   }
 
-  .tqarp-desc {
+  .hg7k9-desc {
     display: flex;
     flex-direction: column;
     gap: 10px;
     float: right;
   }
 
-  .tqarp-menu > a {
+  .hg7k9-menu > a {
     background-color: #fff;
     padding: 10px;
     float: left;
     border-radius: 5px;
   }
 
-  .tqarp-menu > .active,
-  .tqarp-menu > a:hover {
+  .hg7k9-menu > .active,
+  .hg7k9-menu > a:hover {
     background-color: #000;
     color: #fff;
     display: flex;
   }
 
-  .tqarp-desc-menu {
+  .hg7k9-desc-menu {
     width: 200px;
     background-color: #000;
     display: flex;
@@ -266,19 +266,19 @@
     border-radius: 5px;
   }
 
-  .tqarp-desc-menu > div {
+  .hg7k9-desc-menu > div {
     padding: 5px;
     border-radius: 5px;
     background-color: #fff;
     margin: 5px;
   }
 
-  .tqarp-desc-body {
+  .hg7k9-desc-body {
     display: flex;
     justify-content: space-between;
   }
 
-  .tqarp-title {
+  .hg7k9-title {
     width: 100%;
     height: 150px;
     background-color: #000;
@@ -291,7 +291,7 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
 
-  .tqarp-title::before {
+  .hg7k9-title::before {
     content: "";
     position: absolute;
     top: 0;
@@ -306,44 +306,44 @@
     z-index: 1;
   }
 
-  .tqarp-title span {
+  .hg7k9-title span {
     position: relative;
     z-index: 2;
     font-size: 30px;
   }
 
-  .tqarp-body {
+  .hg7k9-body {
     display: flex;
     flex-direction: column;
     gap: 10px;
     text-align: left;
   }
 
-  .tqarp-img {
+  .hg7k9-img {
     display: flex;
     align-items: center;
     justify-content: center;
     width: calc(var(--max) - 460px);
   }
 
-  .tqarp-img img {
+  .hg7k9-img img {
     width: 100%;
   }
 
   @media screen and (min-width: 1024px) {
-    .tqarp-desc {
+    .hg7k9-desc {
       width: calc(var(--max) - 240px);
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .tqarp-menu-btn {
+    .hg7k9-menu-btn {
       display: flex;
       width: calc(100% - 55px);
       margin-left: 5px;
     }
 
-    .tqarp {
+    .hg7k9 {
       display: flex;
       flex-direction: column;
       width: 100%;
@@ -352,17 +352,17 @@
       margin-top: 0px;
     }
 
-    .tqarp-img {
+    .hg7k9-img {
       width: 100%;
     }
 
-    .tqarp-body {
+    .hg7k9-body {
       width: 100%;
       order: 3;
       padding: 10px;
     }
 
-    .tqarp-menu {
+    .hg7k9-menu {
       width: 100%;
       float: none;
       flex-direction: column;
@@ -370,11 +370,11 @@
       display: none;
     }
 
-    .tqarp-menu.active {
+    .hg7k9-menu.active {
       display: flex;
     }
 
-    .tqarp-desc {
+    .hg7k9-desc {
       width: 100% !important;
       order: 2;
     }
