--- a/tr/kullanici-haklari/style.css
+++ b/tr/kullanici-haklari/style.css
@@ -1,17 +1,17 @@
 
-  .bm5kxmenumobil {
+  .akh2ymenumobil {
     display: none;
     cursor: pointer;
   }
 
-  .bm5kxChildren {
+  .akh2yChildren {
     display: flex;
     width: var(--max);
     gap: 15px;
     align-items: end;
   }
 
-  .bm5kx {
+  .akh2y {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -20,7 +20,7 @@
     background-color: #e9e9e9;
   }
 
-  .bm5kxtitle {
+  .akh2ytitle {
     width: 100%;
     background-color: #333;
     display: flex;
@@ -28,7 +28,7 @@
     justify-content: center;
   }
 
-  .bm5kxtitlebody {
+  .akh2ytitlebody {
     color: #fff;
     width: var(--max);
     display: flex;
@@ -36,31 +36,31 @@
     padding: 10px 0px 10px 0px;
   }
 
-  .bm5kxtitlebodytitle {
+  .akh2ytitlebodytitle {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: left;
   }
 
-  .bm5kxtitlebodylang {
+  .akh2ytitlebodylang {
     width: auto;
     margin: -5px 0px -5px 0px;
   }
 
-  .bm5kxtitlebodylang ul {
+  .akh2ytitlebodylang ul {
     display: flex;
     gap: 5px;
   }
 
-  .bm5kxbody {
+  .akh2ybody {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 5px 0px 5px 0px;
   }
 
-  .bm5kxmenulist {
+  .akh2ymenulist {
     display: block;
     background-color: #279c90;
     padding: 10px;
@@ -69,7 +69,7 @@
     width: 100%;
   }
 
-  .bm5kxmenubody {
+  .akh2ymenubody {
     width: 100%;
     background-color: #279c90;
     display: flex;
@@ -77,7 +77,7 @@
     justify-content: center;
   }
 
-  .bm5kxmenulist ul {
+  .akh2ymenulist ul {
     width: 100%;
     list-style-type: none;
     display: flex;
@@ -87,7 +87,7 @@
     overflow-x: auto;
   }
 
-  .bm5kxmenulist ul a {
+  .akh2ymenulist ul a {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -99,14 +99,14 @@
     white-space: nowrap;
   }
 
-  .bm5kxmenulist ul a:hover {
+  .akh2ymenulist ul a:hover {
     background-color: #e0e0e0;
     border-radius: 5px;
     color: #000;
     cursor: pointer;
   }
 
-  .bm5kxmenuitem {
+  .akh2ymenuitem {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -118,30 +118,30 @@
     white-space: nowrap;
   }
 
-  .bm5kxmenuactive {
+  .akh2ymenuactive {
     background-color: #e0e0e0 !important;
     border-radius: 5px;
     color: #000 !important;
     font-weight: bold;
   }
 
-  .bm5kxbodylogo {
+  .akh2ybodylogo {
     height: 100px;
     max-width: 90vw;
   }
 
   @media screen and (min-width: 1024px) {
-    .bm5kxmenumobil {
+    .akh2ymenumobil {
       display: none !important;
     }
 
-    .bm5kxmenulist {
+    .akh2ymenulist {
       display: flex !important;
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .bm5kxmenumobil {
+    .akh2ymenumobil {
       display: flex;
       align-items: center;
       justify-content: end;
@@ -149,22 +149,22 @@
       width: 100%;
     }
 
-    .bm5kxmenumobil div {
+    .akh2ymenumobil div {
       font-size: 32px;
       color: #fff;
       padding: 5px;
     }
 
-    .bm5kxmenulist {
+    .akh2ymenulist {
       display: none;
     }
 
-    .bm5kxbody {
+    .akh2ybody {
       flex-direction: column;
       gap: 20px;
     }
 
-    .bm5kxChildren {
+    .akh2yChildren {
       width: 100%;
       gap: 0px;
       flex-direction: column;
@@ -172,19 +172,19 @@
       justify-content: center;
     }
 
-    .bm5kxmenulist ul a {
+    .akh2ymenulist ul a {
       padding: 10px 0px 10px 0px;
     }
 
-    .bm5kxmenu {
+    .akh2ymenu {
       overflow-x: auto;
     }
 
-    .bm5kxmenulist ul {
+    .akh2ymenulist ul {
       flex-direction: column;
     }
 
-    .bm5kxbodylogo {
+    .akh2ybodylogo {
       max-height: 50vw;
       max-width: 50vw;
       max-height: 100px;
@@ -192,7 +192,7 @@
   }
 
   @media screen and (max-width: 768px) {
-    .bm5kxmenulist ul a {
+    .akh2ymenulist ul a {
       font-size: 14px;
     }
   }
@@ -202,7 +202,7 @@
     justify-content: start;
   }
 
-  .eb39e {
+  .l53tc {
     width: var(--max);
     margin-top: 20px;
     gap: 10px;
@@ -210,7 +210,7 @@
     position: relative;
   }
 
-  .eb39e-menu-btn {
+  .l53tc-menu-btn {
     display: none;
     background-color: #000;
     padding: 10px 20px;
@@ -222,11 +222,11 @@
     align-items: center;
   }
 
-  .eb39e-menu-btn i {
+  .l53tc-menu-btn i {
     font-size: 20px;
   }
 
-  .eb39e-menu {
+  .l53tc-menu {
     width: 200px;
     background-color: #f9f9f9;
     border-radius: 5px;
@@ -237,28 +237,28 @@
     float: left;
   }
 
-  .eb39e-desc {
+  .l53tc-desc {
     display: flex;
     flex-direction: column;
     gap: 10px;
     float: right;
   }
 
-  .eb39e-menu > a {
+  .l53tc-menu > a {
     background-color: #fff;
     padding: 10px;
     float: left;
     border-radius: 5px;
   }
 
-  .eb39e-menu > .active,
-  .eb39e-menu > a:hover {
+  .l53tc-menu > .active,
+  .l53tc-menu > a:hover {
     background-color: #000;
     color: #fff;
     display: flex;
   }
 
-  .eb39e-desc-menu {
+  .l53tc-desc-menu {
     width: 200px;
     background-color: #000;
     display: flex;
@@ -266,19 +266,19 @@
     border-radius: 5px;
   }
 
-  .eb39e-desc-menu > div {
+  .l53tc-desc-menu > div {
     padding: 5px;
     border-radius: 5px;
     background-color: #fff;
     margin: 5px;
   }
 
-  .eb39e-desc-body {
+  .l53tc-desc-body {
     display: flex;
     justify-content: space-between;
   }
 
-  .eb39e-title {
+  .l53tc-title {
     width: 100%;
     height: 150px;
     background-color: #000;
@@ -291,7 +291,7 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
 
-  .eb39e-title::before {
+  .l53tc-title::before {
     content: "";
     position: absolute;
     top: 0;
@@ -306,44 +306,44 @@
     z-index: 1;
   }
 
-  .eb39e-title span {
+  .l53tc-title span {
     position: relative;
     z-index: 2;
     font-size: 30px;
   }
 
-  .eb39e-body {
+  .l53tc-body {
     display: flex;
     flex-direction: column;
     gap: 10px;
     text-align: left;
   }
 
-  .eb39e-img {
+  .l53tc-img {
     display: flex;
     align-items: center;
     justify-content: center;
     width: calc(var(--max) - 460px);
   }
 
-  .eb39e-img img {
+  .l53tc-img img {
     width: 100%;
   }
 
   @media screen and (min-width: 1024px) {
-    .eb39e-desc {
+    .l53tc-desc {
       width: calc(var(--max) - 240px);
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .eb39e-menu-btn {
+    .l53tc-menu-btn {
       display: flex;
       width: calc(100% - 55px);
       margin-left: 5px;
     }
 
-    .eb39e {
+    .l53tc {
       display: flex;
       flex-direction: column;
       width: 100%;
@@ -352,17 +352,17 @@
       margin-top: 0px;
     }
 
-    .eb39e-img {
+    .l53tc-img {
       width: 100%;
     }
 
-    .eb39e-body {
+    .l53tc-body {
       width: 100%;
       order: 3;
       padding: 10px;
     }
 
-    .eb39e-menu {
+    .l53tc-menu {
       width: 100%;
       float: none;
       flex-direction: column;
@@ -370,11 +370,11 @@
       display: none;
     }
 
-    .eb39e-menu.active {
+    .l53tc-menu.active {
       display: flex;
     }
 
-    .eb39e-desc {
+    .l53tc-desc {
       width: 100% !important;
       order: 2;
     }
