--- a/tr/manyetik-rezonans-goruntuleme-cihaz-odalarinin-projelendirilmesi-ve-yapimi/style.css
+++ b/tr/manyetik-rezonans-goruntuleme-cihaz-odalarinin-projelendirilmesi-ve-yapimi/style.css
@@ -1,17 +1,17 @@
 
-  .vy1dnmenumobil {
+  .k74x2menumobil {
     display: none;
     cursor: pointer;
   }
 
-  .vy1dnChildren {
+  .k74x2Children {
     display: flex;
     width: var(--max);
     gap: 15px;
     align-items: end;
   }
 
-  .vy1dn {
+  .k74x2 {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -20,7 +20,7 @@
     background-color: #e9e9e9;
   }
 
-  .vy1dntitle {
+  .k74x2title {
     width: 100%;
     background-color: #333;
     display: flex;
@@ -28,7 +28,7 @@
     justify-content: center;
   }
 
-  .vy1dntitlebody {
+  .k74x2titlebody {
     color: #fff;
     width: var(--max);
     display: flex;
@@ -36,31 +36,31 @@
     padding: 10px 0px 10px 0px;
   }
 
-  .vy1dntitlebodytitle {
+  .k74x2titlebodytitle {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: left;
   }
 
-  .vy1dntitlebodylang {
+  .k74x2titlebodylang {
     width: auto;
     margin: -5px 0px -5px 0px;
   }
 
-  .vy1dntitlebodylang ul {
+  .k74x2titlebodylang ul {
     display: flex;
     gap: 5px;
   }
 
-  .vy1dnbody {
+  .k74x2body {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 5px 0px 5px 0px;
   }
 
-  .vy1dnmenulist {
+  .k74x2menulist {
     display: block;
     background-color: #279c90;
     padding: 10px;
@@ -69,7 +69,7 @@
     width: 100%;
   }
 
-  .vy1dnmenubody {
+  .k74x2menubody {
     width: 100%;
     background-color: #279c90;
     display: flex;
@@ -77,7 +77,7 @@
     justify-content: center;
   }
 
-  .vy1dnmenulist ul {
+  .k74x2menulist ul {
     width: 100%;
     list-style-type: none;
     display: flex;
@@ -87,7 +87,7 @@
     overflow-x: auto;
   }
 
-  .vy1dnmenulist ul a {
+  .k74x2menulist ul a {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -99,14 +99,14 @@
     white-space: nowrap;
   }
 
-  .vy1dnmenulist ul a:hover {
+  .k74x2menulist ul a:hover {
     background-color: #e0e0e0;
     border-radius: 5px;
     color: #000;
     cursor: pointer;
   }
 
-  .vy1dnmenuitem {
+  .k74x2menuitem {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -118,30 +118,30 @@
     white-space: nowrap;
   }
 
-  .vy1dnmenuactive {
+  .k74x2menuactive {
     background-color: #e0e0e0 !important;
     border-radius: 5px;
     color: #000 !important;
     font-weight: bold;
   }
 
-  .vy1dnbodylogo {
+  .k74x2bodylogo {
     height: 100px;
     max-width: 90vw;
   }
 
   @media screen and (min-width: 1024px) {
-    .vy1dnmenumobil {
+    .k74x2menumobil {
       display: none !important;
     }
 
-    .vy1dnmenulist {
+    .k74x2menulist {
       display: flex !important;
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .vy1dnmenumobil {
+    .k74x2menumobil {
       display: flex;
       align-items: center;
       justify-content: end;
@@ -149,22 +149,22 @@
       width: 100%;
     }
 
-    .vy1dnmenumobil div {
+    .k74x2menumobil div {
       font-size: 32px;
       color: #fff;
       padding: 5px;
     }
 
-    .vy1dnmenulist {
+    .k74x2menulist {
       display: none;
     }
 
-    .vy1dnbody {
+    .k74x2body {
       flex-direction: column;
       gap: 20px;
     }
 
-    .vy1dnChildren {
+    .k74x2Children {
       width: 100%;
       gap: 0px;
       flex-direction: column;
@@ -172,19 +172,19 @@
       justify-content: center;
     }
 
-    .vy1dnmenulist ul a {
+    .k74x2menulist ul a {
       padding: 10px 0px 10px 0px;
     }
 
-    .vy1dnmenu {
+    .k74x2menu {
       overflow-x: auto;
     }
 
-    .vy1dnmenulist ul {
+    .k74x2menulist ul {
       flex-direction: column;
     }
 
-    .vy1dnbodylogo {
+    .k74x2bodylogo {
       max-height: 50vw;
       max-width: 50vw;
       max-height: 100px;
@@ -192,7 +192,7 @@
   }
 
   @media screen and (max-width: 768px) {
-    .vy1dnmenulist ul a {
+    .k74x2menulist ul a {
       font-size: 14px;
     }
   }
@@ -202,7 +202,7 @@
     justify-content: start;
   }
 
-  .j8e48 {
+  .andf4 {
     width: var(--max);
     margin-top: 20px;
     gap: 10px;
@@ -210,7 +210,7 @@
     position: relative;
   }
 
-  .j8e48-menu-btn {
+  .andf4-menu-btn {
     display: none;
     background-color: #000;
     padding: 10px 20px;
@@ -222,11 +222,11 @@
     align-items: center;
   }
 
-  .j8e48-menu-btn i {
+  .andf4-menu-btn i {
     font-size: 20px;
   }
 
-  .j8e48-menu {
+  .andf4-menu {
     width: 200px;
     background-color: #f9f9f9;
     border-radius: 5px;
@@ -237,28 +237,28 @@
     float: left;
   }
 
-  .j8e48-desc {
+  .andf4-desc {
     display: flex;
     flex-direction: column;
     gap: 10px;
     float: right;
   }
 
-  .j8e48-menu > a {
+  .andf4-menu > a {
     background-color: #fff;
     padding: 10px;
     float: left;
     border-radius: 5px;
   }
 
-  .j8e48-menu > .active,
-  .j8e48-menu > a:hover {
+  .andf4-menu > .active,
+  .andf4-menu > a:hover {
     background-color: #000;
     color: #fff;
     display: flex;
   }
 
-  .j8e48-desc-menu {
+  .andf4-desc-menu {
     width: 200px;
     background-color: #000;
     display: flex;
@@ -266,19 +266,19 @@
     border-radius: 5px;
   }
 
-  .j8e48-desc-menu > div {
+  .andf4-desc-menu > div {
     padding: 5px;
     border-radius: 5px;
     background-color: #fff;
     margin: 5px;
   }
 
-  .j8e48-desc-body {
+  .andf4-desc-body {
     display: flex;
     justify-content: space-between;
   }
 
-  .j8e48-title {
+  .andf4-title {
     width: 100%;
     height: 150px;
     background-color: #000;
@@ -291,7 +291,7 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
 
-  .j8e48-title::before {
+  .andf4-title::before {
     content: "";
     position: absolute;
     top: 0;
@@ -306,44 +306,44 @@
     z-index: 1;
   }
 
-  .j8e48-title span {
+  .andf4-title span {
     position: relative;
     z-index: 2;
     font-size: 30px;
   }
 
-  .j8e48-body {
+  .andf4-body {
     display: flex;
     flex-direction: column;
     gap: 10px;
     text-align: left;
   }
 
-  .j8e48-img {
+  .andf4-img {
     display: flex;
     align-items: center;
     justify-content: center;
     width: calc(var(--max) - 460px);
   }
 
-  .j8e48-img img {
+  .andf4-img img {
     width: 100%;
   }
 
   @media screen and (min-width: 1024px) {
-    .j8e48-desc {
+    .andf4-desc {
       width: calc(var(--max) - 240px);
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .j8e48-menu-btn {
+    .andf4-menu-btn {
       display: flex;
       width: calc(100% - 55px);
       margin-left: 5px;
     }
 
-    .j8e48 {
+    .andf4 {
       display: flex;
       flex-direction: column;
       width: 100%;
@@ -352,17 +352,17 @@
       margin-top: 0px;
     }
 
-    .j8e48-img {
+    .andf4-img {
       width: 100%;
     }
 
-    .j8e48-body {
+    .andf4-body {
       width: 100%;
       order: 3;
       padding: 10px;
     }
 
-    .j8e48-menu {
+    .andf4-menu {
       width: 100%;
       float: none;
       flex-direction: column;
@@ -370,11 +370,11 @@
       display: none;
     }
 
-    .j8e48-menu.active {
+    .andf4-menu.active {
       display: flex;
     }
 
-    .j8e48-desc {
+    .andf4-desc {
       width: 100% !important;
       order: 2;
     }
