--- a/tr/misyon/style.css
+++ b/tr/misyon/style.css
@@ -1,17 +1,17 @@
 
-  .fi9b4menumobil {
+  .z05lomenumobil {
     display: none;
     cursor: pointer;
   }
 
-  .fi9b4Children {
+  .z05loChildren {
     display: flex;
     width: var(--max);
     gap: 15px;
     align-items: end;
   }
 
-  .fi9b4 {
+  .z05lo {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -20,7 +20,7 @@
     background-color: #e9e9e9;
   }
 
-  .fi9b4title {
+  .z05lotitle {
     width: 100%;
     background-color: #333;
     display: flex;
@@ -28,7 +28,7 @@
     justify-content: center;
   }
 
-  .fi9b4titlebody {
+  .z05lotitlebody {
     color: #fff;
     width: var(--max);
     display: flex;
@@ -36,31 +36,31 @@
     padding: 10px 0px 10px 0px;
   }
 
-  .fi9b4titlebodytitle {
+  .z05lotitlebodytitle {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: left;
   }
 
-  .fi9b4titlebodylang {
+  .z05lotitlebodylang {
     width: auto;
     margin: -5px 0px -5px 0px;
   }
 
-  .fi9b4titlebodylang ul {
+  .z05lotitlebodylang ul {
     display: flex;
     gap: 5px;
   }
 
-  .fi9b4body {
+  .z05lobody {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 5px 0px 5px 0px;
   }
 
-  .fi9b4menulist {
+  .z05lomenulist {
     display: block;
     background-color: #279c90;
     padding: 10px;
@@ -69,7 +69,7 @@
     width: 100%;
   }
 
-  .fi9b4menubody {
+  .z05lomenubody {
     width: 100%;
     background-color: #279c90;
     display: flex;
@@ -77,7 +77,7 @@
     justify-content: center;
   }
 
-  .fi9b4menulist ul {
+  .z05lomenulist ul {
     width: 100%;
     list-style-type: none;
     display: flex;
@@ -87,7 +87,7 @@
     overflow-x: auto;
   }
 
-  .fi9b4menulist ul a {
+  .z05lomenulist ul a {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -99,14 +99,14 @@
     white-space: nowrap;
   }
 
-  .fi9b4menulist ul a:hover {
+  .z05lomenulist ul a:hover {
     background-color: #e0e0e0;
     border-radius: 5px;
     color: #000;
     cursor: pointer;
   }
 
-  .fi9b4menuitem {
+  .z05lomenuitem {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -118,30 +118,30 @@
     white-space: nowrap;
   }
 
-  .fi9b4menuactive {
+  .z05lomenuactive {
     background-color: #e0e0e0 !important;
     border-radius: 5px;
     color: #000 !important;
     font-weight: bold;
   }
 
-  .fi9b4bodylogo {
+  .z05lobodylogo {
     height: 100px;
     max-width: 90vw;
   }
 
   @media screen and (min-width: 1024px) {
-    .fi9b4menumobil {
+    .z05lomenumobil {
       display: none !important;
     }
 
-    .fi9b4menulist {
+    .z05lomenulist {
       display: flex !important;
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .fi9b4menumobil {
+    .z05lomenumobil {
       display: flex;
       align-items: center;
       justify-content: end;
@@ -149,22 +149,22 @@
       width: 100%;
     }
 
-    .fi9b4menumobil div {
+    .z05lomenumobil div {
       font-size: 32px;
       color: #fff;
       padding: 5px;
     }
 
-    .fi9b4menulist {
+    .z05lomenulist {
       display: none;
     }
 
-    .fi9b4body {
+    .z05lobody {
       flex-direction: column;
       gap: 20px;
     }
 
-    .fi9b4Children {
+    .z05loChildren {
       width: 100%;
       gap: 0px;
       flex-direction: column;
@@ -172,19 +172,19 @@
       justify-content: center;
     }
 
-    .fi9b4menulist ul a {
+    .z05lomenulist ul a {
       padding: 10px 0px 10px 0px;
     }
 
-    .fi9b4menu {
+    .z05lomenu {
       overflow-x: auto;
     }
 
-    .fi9b4menulist ul {
+    .z05lomenulist ul {
       flex-direction: column;
     }
 
-    .fi9b4bodylogo {
+    .z05lobodylogo {
       max-height: 50vw;
       max-width: 50vw;
       max-height: 100px;
@@ -192,7 +192,7 @@
   }
 
   @media screen and (max-width: 768px) {
-    .fi9b4menulist ul a {
+    .z05lomenulist ul a {
       font-size: 14px;
     }
   }
@@ -202,7 +202,7 @@
     justify-content: start;
   }
 
-  .z62b8 {
+  .r2qg5 {
     width: var(--max);
     margin-top: 20px;
     gap: 10px;
@@ -210,7 +210,7 @@
     position: relative;
   }
 
-  .z62b8-menu-btn {
+  .r2qg5-menu-btn {
     display: none;
     background-color: #000;
     padding: 10px 20px;
@@ -222,11 +222,11 @@
     align-items: center;
   }
 
-  .z62b8-menu-btn i {
+  .r2qg5-menu-btn i {
     font-size: 20px;
   }
 
-  .z62b8-menu {
+  .r2qg5-menu {
     width: 200px;
     background-color: #f9f9f9;
     border-radius: 5px;
@@ -237,28 +237,28 @@
     float: left;
   }
 
-  .z62b8-desc {
+  .r2qg5-desc {
     display: flex;
     flex-direction: column;
     gap: 10px;
     float: right;
   }
 
-  .z62b8-menu > a {
+  .r2qg5-menu > a {
     background-color: #fff;
     padding: 10px;
     float: left;
     border-radius: 5px;
   }
 
-  .z62b8-menu > .active,
-  .z62b8-menu > a:hover {
+  .r2qg5-menu > .active,
+  .r2qg5-menu > a:hover {
     background-color: #000;
     color: #fff;
     display: flex;
   }
 
-  .z62b8-desc-menu {
+  .r2qg5-desc-menu {
     width: 200px;
     background-color: #000;
     display: flex;
@@ -266,19 +266,19 @@
     border-radius: 5px;
   }
 
-  .z62b8-desc-menu > div {
+  .r2qg5-desc-menu > div {
     padding: 5px;
     border-radius: 5px;
     background-color: #fff;
     margin: 5px;
   }
 
-  .z62b8-desc-body {
+  .r2qg5-desc-body {
     display: flex;
     justify-content: space-between;
   }
 
-  .z62b8-title {
+  .r2qg5-title {
     width: 100%;
     height: 150px;
     background-color: #000;
@@ -291,7 +291,7 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
 
-  .z62b8-title::before {
+  .r2qg5-title::before {
     content: "";
     position: absolute;
     top: 0;
@@ -306,44 +306,44 @@
     z-index: 1;
   }
 
-  .z62b8-title span {
+  .r2qg5-title span {
     position: relative;
     z-index: 2;
     font-size: 30px;
   }
 
-  .z62b8-body {
+  .r2qg5-body {
     display: flex;
     flex-direction: column;
     gap: 10px;
     text-align: left;
   }
 
-  .z62b8-img {
+  .r2qg5-img {
     display: flex;
     align-items: center;
     justify-content: center;
     width: calc(var(--max) - 460px);
   }
 
-  .z62b8-img img {
+  .r2qg5-img img {
     width: 100%;
   }
 
   @media screen and (min-width: 1024px) {
-    .z62b8-desc {
+    .r2qg5-desc {
       width: calc(var(--max) - 240px);
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .z62b8-menu-btn {
+    .r2qg5-menu-btn {
       display: flex;
       width: calc(100% - 55px);
       margin-left: 5px;
     }
 
-    .z62b8 {
+    .r2qg5 {
       display: flex;
       flex-direction: column;
       width: 100%;
@@ -352,17 +352,17 @@
       margin-top: 0px;
     }
 
-    .z62b8-img {
+    .r2qg5-img {
       width: 100%;
     }
 
-    .z62b8-body {
+    .r2qg5-body {
       width: 100%;
       order: 3;
       padding: 10px;
     }
 
-    .z62b8-menu {
+    .r2qg5-menu {
       width: 100%;
       float: none;
       flex-direction: column;
@@ -370,11 +370,11 @@
       display: none;
     }
 
-    .z62b8-menu.active {
+    .r2qg5-menu.active {
       display: flex;
     }
 
-    .z62b8-desc {
+    .r2qg5-desc {
       width: 100% !important;
       order: 2;
     }
