--- a/tr/radyoloji-bolumu-isletme-hizmeti/style.css
+++ b/tr/radyoloji-bolumu-isletme-hizmeti/style.css
@@ -1,17 +1,17 @@
 
-  .f0opqmenumobil {
+  .fw0sjmenumobil {
     display: none;
     cursor: pointer;
   }
 
-  .f0opqChildren {
+  .fw0sjChildren {
     display: flex;
     width: var(--max);
     gap: 15px;
     align-items: end;
   }
 
-  .f0opq {
+  .fw0sj {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -20,7 +20,7 @@
     background-color: #e9e9e9;
   }
 
-  .f0opqtitle {
+  .fw0sjtitle {
     width: 100%;
     background-color: #333;
     display: flex;
@@ -28,7 +28,7 @@
     justify-content: center;
   }
 
-  .f0opqtitlebody {
+  .fw0sjtitlebody {
     color: #fff;
     width: var(--max);
     display: flex;
@@ -36,31 +36,31 @@
     padding: 10px 0px 10px 0px;
   }
 
-  .f0opqtitlebodytitle {
+  .fw0sjtitlebodytitle {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: left;
   }
 
-  .f0opqtitlebodylang {
+  .fw0sjtitlebodylang {
     width: auto;
     margin: -5px 0px -5px 0px;
   }
 
-  .f0opqtitlebodylang ul {
+  .fw0sjtitlebodylang ul {
     display: flex;
     gap: 5px;
   }
 
-  .f0opqbody {
+  .fw0sjbody {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 5px 0px 5px 0px;
   }
 
-  .f0opqmenulist {
+  .fw0sjmenulist {
     display: block;
     background-color: #279c90;
     padding: 10px;
@@ -69,7 +69,7 @@
     width: 100%;
   }
 
-  .f0opqmenubody {
+  .fw0sjmenubody {
     width: 100%;
     background-color: #279c90;
     display: flex;
@@ -77,7 +77,7 @@
     justify-content: center;
   }
 
-  .f0opqmenulist ul {
+  .fw0sjmenulist ul {
     width: 100%;
     list-style-type: none;
     display: flex;
@@ -87,7 +87,7 @@
     overflow-x: auto;
   }
 
-  .f0opqmenulist ul a {
+  .fw0sjmenulist ul a {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -99,14 +99,14 @@
     white-space: nowrap;
   }
 
-  .f0opqmenulist ul a:hover {
+  .fw0sjmenulist ul a:hover {
     background-color: #e0e0e0;
     border-radius: 5px;
     color: #000;
     cursor: pointer;
   }
 
-  .f0opqmenuitem {
+  .fw0sjmenuitem {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -118,30 +118,30 @@
     white-space: nowrap;
   }
 
-  .f0opqmenuactive {
+  .fw0sjmenuactive {
     background-color: #e0e0e0 !important;
     border-radius: 5px;
     color: #000 !important;
     font-weight: bold;
   }
 
-  .f0opqbodylogo {
+  .fw0sjbodylogo {
     height: 100px;
     max-width: 90vw;
   }
 
   @media screen and (min-width: 1024px) {
-    .f0opqmenumobil {
+    .fw0sjmenumobil {
       display: none !important;
     }
 
-    .f0opqmenulist {
+    .fw0sjmenulist {
       display: flex !important;
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .f0opqmenumobil {
+    .fw0sjmenumobil {
       display: flex;
       align-items: center;
       justify-content: end;
@@ -149,22 +149,22 @@
       width: 100%;
     }
 
-    .f0opqmenumobil div {
+    .fw0sjmenumobil div {
       font-size: 32px;
       color: #fff;
       padding: 5px;
     }
 
-    .f0opqmenulist {
+    .fw0sjmenulist {
       display: none;
     }
 
-    .f0opqbody {
+    .fw0sjbody {
       flex-direction: column;
       gap: 20px;
     }
 
-    .f0opqChildren {
+    .fw0sjChildren {
       width: 100%;
       gap: 0px;
       flex-direction: column;
@@ -172,19 +172,19 @@
       justify-content: center;
     }
 
-    .f0opqmenulist ul a {
+    .fw0sjmenulist ul a {
       padding: 10px 0px 10px 0px;
     }
 
-    .f0opqmenu {
+    .fw0sjmenu {
       overflow-x: auto;
     }
 
-    .f0opqmenulist ul {
+    .fw0sjmenulist ul {
       flex-direction: column;
     }
 
-    .f0opqbodylogo {
+    .fw0sjbodylogo {
       max-height: 50vw;
       max-width: 50vw;
       max-height: 100px;
@@ -192,7 +192,7 @@
   }
 
   @media screen and (max-width: 768px) {
-    .f0opqmenulist ul a {
+    .fw0sjmenulist ul a {
       font-size: 14px;
     }
   }
@@ -202,7 +202,7 @@
     justify-content: start;
   }
 
-  .wo5h7 {
+  .pfu3q {
     width: var(--max);
     margin-top: 20px;
     gap: 10px;
@@ -210,7 +210,7 @@
     position: relative;
   }
 
-  .wo5h7-menu-btn {
+  .pfu3q-menu-btn {
     display: none;
     background-color: #000;
     padding: 10px 20px;
@@ -222,11 +222,11 @@
     align-items: center;
   }
 
-  .wo5h7-menu-btn i {
+  .pfu3q-menu-btn i {
     font-size: 20px;
   }
 
-  .wo5h7-menu {
+  .pfu3q-menu {
     width: 200px;
     background-color: #f9f9f9;
     border-radius: 5px;
@@ -237,28 +237,28 @@
     float: left;
   }
 
-  .wo5h7-desc {
+  .pfu3q-desc {
     display: flex;
     flex-direction: column;
     gap: 10px;
     float: right;
   }
 
-  .wo5h7-menu > a {
+  .pfu3q-menu > a {
     background-color: #fff;
     padding: 10px;
     float: left;
     border-radius: 5px;
   }
 
-  .wo5h7-menu > .active,
-  .wo5h7-menu > a:hover {
+  .pfu3q-menu > .active,
+  .pfu3q-menu > a:hover {
     background-color: #000;
     color: #fff;
     display: flex;
   }
 
-  .wo5h7-desc-menu {
+  .pfu3q-desc-menu {
     width: 200px;
     background-color: #000;
     display: flex;
@@ -266,19 +266,19 @@
     border-radius: 5px;
   }
 
-  .wo5h7-desc-menu > div {
+  .pfu3q-desc-menu > div {
     padding: 5px;
     border-radius: 5px;
     background-color: #fff;
     margin: 5px;
   }
 
-  .wo5h7-desc-body {
+  .pfu3q-desc-body {
     display: flex;
     justify-content: space-between;
   }
 
-  .wo5h7-title {
+  .pfu3q-title {
     width: 100%;
     height: 150px;
     background-color: #000;
@@ -291,7 +291,7 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
 
-  .wo5h7-title::before {
+  .pfu3q-title::before {
     content: "";
     position: absolute;
     top: 0;
@@ -306,44 +306,44 @@
     z-index: 1;
   }
 
-  .wo5h7-title span {
+  .pfu3q-title span {
     position: relative;
     z-index: 2;
     font-size: 30px;
   }
 
-  .wo5h7-body {
+  .pfu3q-body {
     display: flex;
     flex-direction: column;
     gap: 10px;
     text-align: left;
   }
 
-  .wo5h7-img {
+  .pfu3q-img {
     display: flex;
     align-items: center;
     justify-content: center;
     width: calc(var(--max) - 460px);
   }
 
-  .wo5h7-img img {
+  .pfu3q-img img {
     width: 100%;
   }
 
   @media screen and (min-width: 1024px) {
-    .wo5h7-desc {
+    .pfu3q-desc {
       width: calc(var(--max) - 240px);
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .wo5h7-menu-btn {
+    .pfu3q-menu-btn {
       display: flex;
       width: calc(100% - 55px);
       margin-left: 5px;
     }
 
-    .wo5h7 {
+    .pfu3q {
       display: flex;
       flex-direction: column;
       width: 100%;
@@ -352,17 +352,17 @@
       margin-top: 0px;
     }
 
-    .wo5h7-img {
+    .pfu3q-img {
       width: 100%;
     }
 
-    .wo5h7-body {
+    .pfu3q-body {
       width: 100%;
       order: 3;
       padding: 10px;
     }
 
-    .wo5h7-menu {
+    .pfu3q-menu {
       width: 100%;
       float: none;
       flex-direction: column;
@@ -370,11 +370,11 @@
       display: none;
     }
 
-    .wo5h7-menu.active {
+    .pfu3q-menu.active {
       display: flex;
     }
 
-    .wo5h7-desc {
+    .pfu3q-desc {
       width: 100% !important;
       order: 2;
     }
