--- a/tr/radyoloji-cihaz-satisi-sifir-ve-ikinci-el/style.css
+++ b/tr/radyoloji-cihaz-satisi-sifir-ve-ikinci-el/style.css
@@ -1,17 +1,17 @@
 
-  .x6bogmenumobil {
+  .dho7tmenumobil {
     display: none;
     cursor: pointer;
   }
 
-  .x6bogChildren {
+  .dho7tChildren {
     display: flex;
     width: var(--max);
     gap: 15px;
     align-items: end;
   }
 
-  .x6bog {
+  .dho7t {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -20,7 +20,7 @@
     background-color: #e9e9e9;
   }
 
-  .x6bogtitle {
+  .dho7ttitle {
     width: 100%;
     background-color: #333;
     display: flex;
@@ -28,7 +28,7 @@
     justify-content: center;
   }
 
-  .x6bogtitlebody {
+  .dho7ttitlebody {
     color: #fff;
     width: var(--max);
     display: flex;
@@ -36,31 +36,31 @@
     padding: 10px 0px 10px 0px;
   }
 
-  .x6bogtitlebodytitle {
+  .dho7ttitlebodytitle {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: left;
   }
 
-  .x6bogtitlebodylang {
+  .dho7ttitlebodylang {
     width: auto;
     margin: -5px 0px -5px 0px;
   }
 
-  .x6bogtitlebodylang ul {
+  .dho7ttitlebodylang ul {
     display: flex;
     gap: 5px;
   }
 
-  .x6bogbody {
+  .dho7tbody {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 5px 0px 5px 0px;
   }
 
-  .x6bogmenulist {
+  .dho7tmenulist {
     display: block;
     background-color: #279c90;
     padding: 10px;
@@ -69,7 +69,7 @@
     width: 100%;
   }
 
-  .x6bogmenubody {
+  .dho7tmenubody {
     width: 100%;
     background-color: #279c90;
     display: flex;
@@ -77,7 +77,7 @@
     justify-content: center;
   }
 
-  .x6bogmenulist ul {
+  .dho7tmenulist ul {
     width: 100%;
     list-style-type: none;
     display: flex;
@@ -87,7 +87,7 @@
     overflow-x: auto;
   }
 
-  .x6bogmenulist ul a {
+  .dho7tmenulist ul a {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -99,14 +99,14 @@
     white-space: nowrap;
   }
 
-  .x6bogmenulist ul a:hover {
+  .dho7tmenulist ul a:hover {
     background-color: #e0e0e0;
     border-radius: 5px;
     color: #000;
     cursor: pointer;
   }
 
-  .x6bogmenuitem {
+  .dho7tmenuitem {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -118,30 +118,30 @@
     white-space: nowrap;
   }
 
-  .x6bogmenuactive {
+  .dho7tmenuactive {
     background-color: #e0e0e0 !important;
     border-radius: 5px;
     color: #000 !important;
     font-weight: bold;
   }
 
-  .x6bogbodylogo {
+  .dho7tbodylogo {
     height: 100px;
     max-width: 90vw;
   }
 
   @media screen and (min-width: 1024px) {
-    .x6bogmenumobil {
+    .dho7tmenumobil {
       display: none !important;
     }
 
-    .x6bogmenulist {
+    .dho7tmenulist {
       display: flex !important;
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .x6bogmenumobil {
+    .dho7tmenumobil {
       display: flex;
       align-items: center;
       justify-content: end;
@@ -149,22 +149,22 @@
       width: 100%;
     }
 
-    .x6bogmenumobil div {
+    .dho7tmenumobil div {
       font-size: 32px;
       color: #fff;
       padding: 5px;
     }
 
-    .x6bogmenulist {
+    .dho7tmenulist {
       display: none;
     }
 
-    .x6bogbody {
+    .dho7tbody {
       flex-direction: column;
       gap: 20px;
     }
 
-    .x6bogChildren {
+    .dho7tChildren {
       width: 100%;
       gap: 0px;
       flex-direction: column;
@@ -172,19 +172,19 @@
       justify-content: center;
     }
 
-    .x6bogmenulist ul a {
+    .dho7tmenulist ul a {
       padding: 10px 0px 10px 0px;
     }
 
-    .x6bogmenu {
+    .dho7tmenu {
       overflow-x: auto;
     }
 
-    .x6bogmenulist ul {
+    .dho7tmenulist ul {
       flex-direction: column;
     }
 
-    .x6bogbodylogo {
+    .dho7tbodylogo {
       max-height: 50vw;
       max-width: 50vw;
       max-height: 100px;
@@ -192,7 +192,7 @@
   }
 
   @media screen and (max-width: 768px) {
-    .x6bogmenulist ul a {
+    .dho7tmenulist ul a {
       font-size: 14px;
     }
   }
@@ -202,7 +202,7 @@
     justify-content: start;
   }
 
-  .h9j6n {
+  .r35wk {
     width: var(--max);
     margin-top: 20px;
     gap: 10px;
@@ -210,7 +210,7 @@
     position: relative;
   }
 
-  .h9j6n-menu-btn {
+  .r35wk-menu-btn {
     display: none;
     background-color: #000;
     padding: 10px 20px;
@@ -222,11 +222,11 @@
     align-items: center;
   }
 
-  .h9j6n-menu-btn i {
+  .r35wk-menu-btn i {
     font-size: 20px;
   }
 
-  .h9j6n-menu {
+  .r35wk-menu {
     width: 200px;
     background-color: #f9f9f9;
     border-radius: 5px;
@@ -237,28 +237,28 @@
     float: left;
   }
 
-  .h9j6n-desc {
+  .r35wk-desc {
     display: flex;
     flex-direction: column;
     gap: 10px;
     float: right;
   }
 
-  .h9j6n-menu > a {
+  .r35wk-menu > a {
     background-color: #fff;
     padding: 10px;
     float: left;
     border-radius: 5px;
   }
 
-  .h9j6n-menu > .active,
-  .h9j6n-menu > a:hover {
+  .r35wk-menu > .active,
+  .r35wk-menu > a:hover {
     background-color: #000;
     color: #fff;
     display: flex;
   }
 
-  .h9j6n-desc-menu {
+  .r35wk-desc-menu {
     width: 200px;
     background-color: #000;
     display: flex;
@@ -266,19 +266,19 @@
     border-radius: 5px;
   }
 
-  .h9j6n-desc-menu > div {
+  .r35wk-desc-menu > div {
     padding: 5px;
     border-radius: 5px;
     background-color: #fff;
     margin: 5px;
   }
 
-  .h9j6n-desc-body {
+  .r35wk-desc-body {
     display: flex;
     justify-content: space-between;
   }
 
-  .h9j6n-title {
+  .r35wk-title {
     width: 100%;
     height: 150px;
     background-color: #000;
@@ -291,7 +291,7 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
 
-  .h9j6n-title::before {
+  .r35wk-title::before {
     content: "";
     position: absolute;
     top: 0;
@@ -306,44 +306,44 @@
     z-index: 1;
   }
 
-  .h9j6n-title span {
+  .r35wk-title span {
     position: relative;
     z-index: 2;
     font-size: 30px;
   }
 
-  .h9j6n-body {
+  .r35wk-body {
     display: flex;
     flex-direction: column;
     gap: 10px;
     text-align: left;
   }
 
-  .h9j6n-img {
+  .r35wk-img {
     display: flex;
     align-items: center;
     justify-content: center;
     width: calc(var(--max) - 460px);
   }
 
-  .h9j6n-img img {
+  .r35wk-img img {
     width: 100%;
   }
 
   @media screen and (min-width: 1024px) {
-    .h9j6n-desc {
+    .r35wk-desc {
       width: calc(var(--max) - 240px);
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .h9j6n-menu-btn {
+    .r35wk-menu-btn {
       display: flex;
       width: calc(100% - 55px);
       margin-left: 5px;
     }
 
-    .h9j6n {
+    .r35wk {
       display: flex;
       flex-direction: column;
       width: 100%;
@@ -352,17 +352,17 @@
       margin-top: 0px;
     }
 
-    .h9j6n-img {
+    .r35wk-img {
       width: 100%;
     }
 
-    .h9j6n-body {
+    .r35wk-body {
       width: 100%;
       order: 3;
       padding: 10px;
     }
 
-    .h9j6n-menu {
+    .r35wk-menu {
       width: 100%;
       float: none;
       flex-direction: column;
@@ -370,11 +370,11 @@
       display: none;
     }
 
-    .h9j6n-menu.active {
+    .r35wk-menu.active {
       display: flex;
     }
 
-    .h9j6n-desc {
+    .r35wk-desc {
       width: 100% !important;
       order: 2;
     }
