--- a/tr/radyolojik-cihazlarin-bakim-onarim-ve-yedek-parca-temini/style.css
+++ b/tr/radyolojik-cihazlarin-bakim-onarim-ve-yedek-parca-temini/style.css
@@ -1,17 +1,17 @@
 
-  .kp6vxmenumobil {
+  .yvitymenumobil {
     display: none;
     cursor: pointer;
   }
 
-  .kp6vxChildren {
+  .yvityChildren {
     display: flex;
     width: var(--max);
     gap: 15px;
     align-items: end;
   }
 
-  .kp6vx {
+  .yvity {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -20,7 +20,7 @@
     background-color: #e9e9e9;
   }
 
-  .kp6vxtitle {
+  .yvitytitle {
     width: 100%;
     background-color: #333;
     display: flex;
@@ -28,7 +28,7 @@
     justify-content: center;
   }
 
-  .kp6vxtitlebody {
+  .yvitytitlebody {
     color: #fff;
     width: var(--max);
     display: flex;
@@ -36,31 +36,31 @@
     padding: 10px 0px 10px 0px;
   }
 
-  .kp6vxtitlebodytitle {
+  .yvitytitlebodytitle {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: left;
   }
 
-  .kp6vxtitlebodylang {
+  .yvitytitlebodylang {
     width: auto;
     margin: -5px 0px -5px 0px;
   }
 
-  .kp6vxtitlebodylang ul {
+  .yvitytitlebodylang ul {
     display: flex;
     gap: 5px;
   }
 
-  .kp6vxbody {
+  .yvitybody {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 5px 0px 5px 0px;
   }
 
-  .kp6vxmenulist {
+  .yvitymenulist {
     display: block;
     background-color: #279c90;
     padding: 10px;
@@ -69,7 +69,7 @@
     width: 100%;
   }
 
-  .kp6vxmenubody {
+  .yvitymenubody {
     width: 100%;
     background-color: #279c90;
     display: flex;
@@ -77,7 +77,7 @@
     justify-content: center;
   }
 
-  .kp6vxmenulist ul {
+  .yvitymenulist ul {
     width: 100%;
     list-style-type: none;
     display: flex;
@@ -87,7 +87,7 @@
     overflow-x: auto;
   }
 
-  .kp6vxmenulist ul a {
+  .yvitymenulist ul a {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -99,14 +99,14 @@
     white-space: nowrap;
   }
 
-  .kp6vxmenulist ul a:hover {
+  .yvitymenulist ul a:hover {
     background-color: #e0e0e0;
     border-radius: 5px;
     color: #000;
     cursor: pointer;
   }
 
-  .kp6vxmenuitem {
+  .yvitymenuitem {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -118,30 +118,30 @@
     white-space: nowrap;
   }
 
-  .kp6vxmenuactive {
+  .yvitymenuactive {
     background-color: #e0e0e0 !important;
     border-radius: 5px;
     color: #000 !important;
     font-weight: bold;
   }
 
-  .kp6vxbodylogo {
+  .yvitybodylogo {
     height: 100px;
     max-width: 90vw;
   }
 
   @media screen and (min-width: 1024px) {
-    .kp6vxmenumobil {
+    .yvitymenumobil {
       display: none !important;
     }
 
-    .kp6vxmenulist {
+    .yvitymenulist {
       display: flex !important;
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .kp6vxmenumobil {
+    .yvitymenumobil {
       display: flex;
       align-items: center;
       justify-content: end;
@@ -149,22 +149,22 @@
       width: 100%;
     }
 
-    .kp6vxmenumobil div {
+    .yvitymenumobil div {
       font-size: 32px;
       color: #fff;
       padding: 5px;
     }
 
-    .kp6vxmenulist {
+    .yvitymenulist {
       display: none;
     }
 
-    .kp6vxbody {
+    .yvitybody {
       flex-direction: column;
       gap: 20px;
     }
 
-    .kp6vxChildren {
+    .yvityChildren {
       width: 100%;
       gap: 0px;
       flex-direction: column;
@@ -172,19 +172,19 @@
       justify-content: center;
     }
 
-    .kp6vxmenulist ul a {
+    .yvitymenulist ul a {
       padding: 10px 0px 10px 0px;
     }
 
-    .kp6vxmenu {
+    .yvitymenu {
       overflow-x: auto;
     }
 
-    .kp6vxmenulist ul {
+    .yvitymenulist ul {
       flex-direction: column;
     }
 
-    .kp6vxbodylogo {
+    .yvitybodylogo {
       max-height: 50vw;
       max-width: 50vw;
       max-height: 100px;
@@ -192,7 +192,7 @@
   }
 
   @media screen and (max-width: 768px) {
-    .kp6vxmenulist ul a {
+    .yvitymenulist ul a {
       font-size: 14px;
     }
   }
@@ -202,7 +202,7 @@
     justify-content: start;
   }
 
-  .por6a {
+  .ua4r8 {
     width: var(--max);
     margin-top: 20px;
     gap: 10px;
@@ -210,7 +210,7 @@
     position: relative;
   }
 
-  .por6a-menu-btn {
+  .ua4r8-menu-btn {
     display: none;
     background-color: #000;
     padding: 10px 20px;
@@ -222,11 +222,11 @@
     align-items: center;
   }
 
-  .por6a-menu-btn i {
+  .ua4r8-menu-btn i {
     font-size: 20px;
   }
 
-  .por6a-menu {
+  .ua4r8-menu {
     width: 200px;
     background-color: #f9f9f9;
     border-radius: 5px;
@@ -237,28 +237,28 @@
     float: left;
   }
 
-  .por6a-desc {
+  .ua4r8-desc {
     display: flex;
     flex-direction: column;
     gap: 10px;
     float: right;
   }
 
-  .por6a-menu > a {
+  .ua4r8-menu > a {
     background-color: #fff;
     padding: 10px;
     float: left;
     border-radius: 5px;
   }
 
-  .por6a-menu > .active,
-  .por6a-menu > a:hover {
+  .ua4r8-menu > .active,
+  .ua4r8-menu > a:hover {
     background-color: #000;
     color: #fff;
     display: flex;
   }
 
-  .por6a-desc-menu {
+  .ua4r8-desc-menu {
     width: 200px;
     background-color: #000;
     display: flex;
@@ -266,19 +266,19 @@
     border-radius: 5px;
   }
 
-  .por6a-desc-menu > div {
+  .ua4r8-desc-menu > div {
     padding: 5px;
     border-radius: 5px;
     background-color: #fff;
     margin: 5px;
   }
 
-  .por6a-desc-body {
+  .ua4r8-desc-body {
     display: flex;
     justify-content: space-between;
   }
 
-  .por6a-title {
+  .ua4r8-title {
     width: 100%;
     height: 150px;
     background-color: #000;
@@ -291,7 +291,7 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
 
-  .por6a-title::before {
+  .ua4r8-title::before {
     content: "";
     position: absolute;
     top: 0;
@@ -306,44 +306,44 @@
     z-index: 1;
   }
 
-  .por6a-title span {
+  .ua4r8-title span {
     position: relative;
     z-index: 2;
     font-size: 30px;
   }
 
-  .por6a-body {
+  .ua4r8-body {
     display: flex;
     flex-direction: column;
     gap: 10px;
     text-align: left;
   }
 
-  .por6a-img {
+  .ua4r8-img {
     display: flex;
     align-items: center;
     justify-content: center;
     width: calc(var(--max) - 460px);
   }
 
-  .por6a-img img {
+  .ua4r8-img img {
     width: 100%;
   }
 
   @media screen and (min-width: 1024px) {
-    .por6a-desc {
+    .ua4r8-desc {
       width: calc(var(--max) - 240px);
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .por6a-menu-btn {
+    .ua4r8-menu-btn {
       display: flex;
       width: calc(100% - 55px);
       margin-left: 5px;
     }
 
-    .por6a {
+    .ua4r8 {
       display: flex;
       flex-direction: column;
       width: 100%;
@@ -352,17 +352,17 @@
       margin-top: 0px;
     }
 
-    .por6a-img {
+    .ua4r8-img {
       width: 100%;
     }
 
-    .por6a-body {
+    .ua4r8-body {
       width: 100%;
       order: 3;
       padding: 10px;
     }
 
-    .por6a-menu {
+    .ua4r8-menu {
       width: 100%;
       float: none;
       flex-direction: column;
@@ -370,11 +370,11 @@
       display: none;
     }
 
-    .por6a-menu.active {
+    .ua4r8-menu.active {
       display: flex;
     }
 
-    .por6a-desc {
+    .ua4r8-desc {
       width: 100% !important;
       order: 2;
     }
