--- a/tr/radyolojik-cihazlarin-taek-lisanslamada-danismanlik-hizmeti/style.css
+++ b/tr/radyolojik-cihazlarin-taek-lisanslamada-danismanlik-hizmeti/style.css
@@ -1,17 +1,17 @@
 
-  .j7kqlmenumobil {
+  .i2tqzmenumobil {
     display: none;
     cursor: pointer;
   }
 
-  .j7kqlChildren {
+  .i2tqzChildren {
     display: flex;
     width: var(--max);
     gap: 15px;
     align-items: end;
   }
 
-  .j7kql {
+  .i2tqz {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -20,7 +20,7 @@
     background-color: #e9e9e9;
   }
 
-  .j7kqltitle {
+  .i2tqztitle {
     width: 100%;
     background-color: #333;
     display: flex;
@@ -28,7 +28,7 @@
     justify-content: center;
   }
 
-  .j7kqltitlebody {
+  .i2tqztitlebody {
     color: #fff;
     width: var(--max);
     display: flex;
@@ -36,31 +36,31 @@
     padding: 10px 0px 10px 0px;
   }
 
-  .j7kqltitlebodytitle {
+  .i2tqztitlebodytitle {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: left;
   }
 
-  .j7kqltitlebodylang {
+  .i2tqztitlebodylang {
     width: auto;
     margin: -5px 0px -5px 0px;
   }
 
-  .j7kqltitlebodylang ul {
+  .i2tqztitlebodylang ul {
     display: flex;
     gap: 5px;
   }
 
-  .j7kqlbody {
+  .i2tqzbody {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 5px 0px 5px 0px;
   }
 
-  .j7kqlmenulist {
+  .i2tqzmenulist {
     display: block;
     background-color: #279c90;
     padding: 10px;
@@ -69,7 +69,7 @@
     width: 100%;
   }
 
-  .j7kqlmenubody {
+  .i2tqzmenubody {
     width: 100%;
     background-color: #279c90;
     display: flex;
@@ -77,7 +77,7 @@
     justify-content: center;
   }
 
-  .j7kqlmenulist ul {
+  .i2tqzmenulist ul {
     width: 100%;
     list-style-type: none;
     display: flex;
@@ -87,7 +87,7 @@
     overflow-x: auto;
   }
 
-  .j7kqlmenulist ul a {
+  .i2tqzmenulist ul a {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -99,14 +99,14 @@
     white-space: nowrap;
   }
 
-  .j7kqlmenulist ul a:hover {
+  .i2tqzmenulist ul a:hover {
     background-color: #e0e0e0;
     border-radius: 5px;
     color: #000;
     cursor: pointer;
   }
 
-  .j7kqlmenuitem {
+  .i2tqzmenuitem {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -118,30 +118,30 @@
     white-space: nowrap;
   }
 
-  .j7kqlmenuactive {
+  .i2tqzmenuactive {
     background-color: #e0e0e0 !important;
     border-radius: 5px;
     color: #000 !important;
     font-weight: bold;
   }
 
-  .j7kqlbodylogo {
+  .i2tqzbodylogo {
     height: 100px;
     max-width: 90vw;
   }
 
   @media screen and (min-width: 1024px) {
-    .j7kqlmenumobil {
+    .i2tqzmenumobil {
       display: none !important;
     }
 
-    .j7kqlmenulist {
+    .i2tqzmenulist {
       display: flex !important;
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .j7kqlmenumobil {
+    .i2tqzmenumobil {
       display: flex;
       align-items: center;
       justify-content: end;
@@ -149,22 +149,22 @@
       width: 100%;
     }
 
-    .j7kqlmenumobil div {
+    .i2tqzmenumobil div {
       font-size: 32px;
       color: #fff;
       padding: 5px;
     }
 
-    .j7kqlmenulist {
+    .i2tqzmenulist {
       display: none;
     }
 
-    .j7kqlbody {
+    .i2tqzbody {
       flex-direction: column;
       gap: 20px;
     }
 
-    .j7kqlChildren {
+    .i2tqzChildren {
       width: 100%;
       gap: 0px;
       flex-direction: column;
@@ -172,19 +172,19 @@
       justify-content: center;
     }
 
-    .j7kqlmenulist ul a {
+    .i2tqzmenulist ul a {
       padding: 10px 0px 10px 0px;
     }
 
-    .j7kqlmenu {
+    .i2tqzmenu {
       overflow-x: auto;
     }
 
-    .j7kqlmenulist ul {
+    .i2tqzmenulist ul {
       flex-direction: column;
     }
 
-    .j7kqlbodylogo {
+    .i2tqzbodylogo {
       max-height: 50vw;
       max-width: 50vw;
       max-height: 100px;
@@ -192,7 +192,7 @@
   }
 
   @media screen and (max-width: 768px) {
-    .j7kqlmenulist ul a {
+    .i2tqzmenulist ul a {
       font-size: 14px;
     }
   }
@@ -202,7 +202,7 @@
     justify-content: start;
   }
 
-  .ffh3w {
+  .cnyip {
     width: var(--max);
     margin-top: 20px;
     gap: 10px;
@@ -210,7 +210,7 @@
     position: relative;
   }
 
-  .ffh3w-menu-btn {
+  .cnyip-menu-btn {
     display: none;
     background-color: #000;
     padding: 10px 20px;
@@ -222,11 +222,11 @@
     align-items: center;
   }
 
-  .ffh3w-menu-btn i {
+  .cnyip-menu-btn i {
     font-size: 20px;
   }
 
-  .ffh3w-menu {
+  .cnyip-menu {
     width: 200px;
     background-color: #f9f9f9;
     border-radius: 5px;
@@ -237,28 +237,28 @@
     float: left;
   }
 
-  .ffh3w-desc {
+  .cnyip-desc {
     display: flex;
     flex-direction: column;
     gap: 10px;
     float: right;
   }
 
-  .ffh3w-menu > a {
+  .cnyip-menu > a {
     background-color: #fff;
     padding: 10px;
     float: left;
     border-radius: 5px;
   }
 
-  .ffh3w-menu > .active,
-  .ffh3w-menu > a:hover {
+  .cnyip-menu > .active,
+  .cnyip-menu > a:hover {
     background-color: #000;
     color: #fff;
     display: flex;
   }
 
-  .ffh3w-desc-menu {
+  .cnyip-desc-menu {
     width: 200px;
     background-color: #000;
     display: flex;
@@ -266,19 +266,19 @@
     border-radius: 5px;
   }
 
-  .ffh3w-desc-menu > div {
+  .cnyip-desc-menu > div {
     padding: 5px;
     border-radius: 5px;
     background-color: #fff;
     margin: 5px;
   }
 
-  .ffh3w-desc-body {
+  .cnyip-desc-body {
     display: flex;
     justify-content: space-between;
   }
 
-  .ffh3w-title {
+  .cnyip-title {
     width: 100%;
     height: 150px;
     background-color: #000;
@@ -291,7 +291,7 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
 
-  .ffh3w-title::before {
+  .cnyip-title::before {
     content: "";
     position: absolute;
     top: 0;
@@ -306,44 +306,44 @@
     z-index: 1;
   }
 
-  .ffh3w-title span {
+  .cnyip-title span {
     position: relative;
     z-index: 2;
     font-size: 30px;
   }
 
-  .ffh3w-body {
+  .cnyip-body {
     display: flex;
     flex-direction: column;
     gap: 10px;
     text-align: left;
   }
 
-  .ffh3w-img {
+  .cnyip-img {
     display: flex;
     align-items: center;
     justify-content: center;
     width: calc(var(--max) - 460px);
   }
 
-  .ffh3w-img img {
+  .cnyip-img img {
     width: 100%;
   }
 
   @media screen and (min-width: 1024px) {
-    .ffh3w-desc {
+    .cnyip-desc {
       width: calc(var(--max) - 240px);
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .ffh3w-menu-btn {
+    .cnyip-menu-btn {
       display: flex;
       width: calc(100% - 55px);
       margin-left: 5px;
     }
 
-    .ffh3w {
+    .cnyip {
       display: flex;
       flex-direction: column;
       width: 100%;
@@ -352,17 +352,17 @@
       margin-top: 0px;
     }
 
-    .ffh3w-img {
+    .cnyip-img {
       width: 100%;
     }
 
-    .ffh3w-body {
+    .cnyip-body {
       width: 100%;
       order: 3;
       padding: 10px;
     }
 
-    .ffh3w-menu {
+    .cnyip-menu {
       width: 100%;
       float: none;
       flex-direction: column;
@@ -370,11 +370,11 @@
       display: none;
     }
 
-    .ffh3w-menu.active {
+    .cnyip-menu.active {
       display: flex;
     }
 
-    .ffh3w-desc {
+    .cnyip-desc {
       width: 100% !important;
       order: 2;
     }
