--- a/tr/referanslarimiz/style.css
+++ b/tr/referanslarimiz/style.css
@@ -1,17 +1,17 @@
 
-  .gt0pamenumobil {
+  .ff0q9menumobil {
     display: none;
     cursor: pointer;
   }
 
-  .gt0paChildren {
+  .ff0q9Children {
     display: flex;
     width: var(--max);
     gap: 15px;
     align-items: end;
   }
 
-  .gt0pa {
+  .ff0q9 {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -20,7 +20,7 @@
     background-color: #e9e9e9;
   }
 
-  .gt0patitle {
+  .ff0q9title {
     width: 100%;
     background-color: #333;
     display: flex;
@@ -28,7 +28,7 @@
     justify-content: center;
   }
 
-  .gt0patitlebody {
+  .ff0q9titlebody {
     color: #fff;
     width: var(--max);
     display: flex;
@@ -36,31 +36,31 @@
     padding: 10px 0px 10px 0px;
   }
 
-  .gt0patitlebodytitle {
+  .ff0q9titlebodytitle {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: left;
   }
 
-  .gt0patitlebodylang {
+  .ff0q9titlebodylang {
     width: auto;
     margin: -5px 0px -5px 0px;
   }
 
-  .gt0patitlebodylang ul {
+  .ff0q9titlebodylang ul {
     display: flex;
     gap: 5px;
   }
 
-  .gt0pabody {
+  .ff0q9body {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 5px 0px 5px 0px;
   }
 
-  .gt0pamenulist {
+  .ff0q9menulist {
     display: block;
     background-color: #279c90;
     padding: 10px;
@@ -69,7 +69,7 @@
     width: 100%;
   }
 
-  .gt0pamenubody {
+  .ff0q9menubody {
     width: 100%;
     background-color: #279c90;
     display: flex;
@@ -77,7 +77,7 @@
     justify-content: center;
   }
 
-  .gt0pamenulist ul {
+  .ff0q9menulist ul {
     width: 100%;
     list-style-type: none;
     display: flex;
@@ -87,7 +87,7 @@
     overflow-x: auto;
   }
 
-  .gt0pamenulist ul a {
+  .ff0q9menulist ul a {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -99,14 +99,14 @@
     white-space: nowrap;
   }
 
-  .gt0pamenulist ul a:hover {
+  .ff0q9menulist ul a:hover {
     background-color: #e0e0e0;
     border-radius: 5px;
     color: #000;
     cursor: pointer;
   }
 
-  .gt0pamenuitem {
+  .ff0q9menuitem {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -118,30 +118,30 @@
     white-space: nowrap;
   }
 
-  .gt0pamenuactive {
+  .ff0q9menuactive {
     background-color: #e0e0e0 !important;
     border-radius: 5px;
     color: #000 !important;
     font-weight: bold;
   }
 
-  .gt0pabodylogo {
+  .ff0q9bodylogo {
     height: 100px;
     max-width: 90vw;
   }
 
   @media screen and (min-width: 1024px) {
-    .gt0pamenumobil {
+    .ff0q9menumobil {
       display: none !important;
     }
 
-    .gt0pamenulist {
+    .ff0q9menulist {
       display: flex !important;
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .gt0pamenumobil {
+    .ff0q9menumobil {
       display: flex;
       align-items: center;
       justify-content: end;
@@ -149,22 +149,22 @@
       width: 100%;
     }
 
-    .gt0pamenumobil div {
+    .ff0q9menumobil div {
       font-size: 32px;
       color: #fff;
       padding: 5px;
     }
 
-    .gt0pamenulist {
+    .ff0q9menulist {
       display: none;
     }
 
-    .gt0pabody {
+    .ff0q9body {
       flex-direction: column;
       gap: 20px;
     }
 
-    .gt0paChildren {
+    .ff0q9Children {
       width: 100%;
       gap: 0px;
       flex-direction: column;
@@ -172,19 +172,19 @@
       justify-content: center;
     }
 
-    .gt0pamenulist ul a {
+    .ff0q9menulist ul a {
       padding: 10px 0px 10px 0px;
     }
 
-    .gt0pamenu {
+    .ff0q9menu {
       overflow-x: auto;
     }
 
-    .gt0pamenulist ul {
+    .ff0q9menulist ul {
       flex-direction: column;
     }
 
-    .gt0pabodylogo {
+    .ff0q9bodylogo {
       max-height: 50vw;
       max-width: 50vw;
       max-height: 100px;
@@ -192,27 +192,27 @@
   }
 
   @media screen and (max-width: 768px) {
-    .gt0pamenulist ul a {
+    .ff0q9menulist ul a {
       font-size: 14px;
     }
   }
 
 
-  .qpztu {
+  .ps4ae {
     margin-top: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
   }
 
-  .qpztubody {
+  .ps4aebody {
     width: var(--max);
     display: grid;
     gap: 20px;
     grid-template-columns: repeat(2, 1fr);
   }
 
-  .qpztubodyitem {
+  .ps4aebodyitem {
     cursor: pointer;
     background-color: #e9e9e9;
     border-radius: 12px;
@@ -227,23 +227,23 @@
     padding: 10px;
   }
 
-  .qpztubodyitem:hover {
+  .ps4aebodyitem:hover {
     transform: translateY(-5px);
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
   }
 
-  .qpztubodyitem:hover .qpztubodyitemimg {
+  .ps4aebodyitem:hover .ps4aebodyitemimg {
     transform: scale(1.1);
   }
 
-  .qpztubodyitemimg {
+  .ps4aebodyitemimg {
     width: 100%;
     height: 100%;
     object-fit: cover;
     transition: transform 0.5s ease;
   }
 
-  .qpztubodyitemtitle {
+  .ps4aebodyitemtitle {
     padding: 10px;
     background-color: #e9e9e9;
     text-align: left;
@@ -251,14 +251,14 @@
     font-weight: --font-weight--;
     font-size: 16px;
   }
-  .qpztubodyitemtext {
+  .ps4aebodyitemtext {
     font-size: 16px;
     color: #000;
     font-weight: bold;
   }
 
   @media screen and (max-width: 1024px) {
-    .qpztubody {
+    .ps4aebody {
       width: calc(100% - 30px);
       margin: 0 15px;
       grid-template-columns: repeat(3, 1fr);
@@ -267,7 +267,7 @@
   }
 
   @media screen and (max-width: 768px) {
-    .qpztubody {
+    .ps4aebody {
       width: calc(100% - 20px);
       margin: 0 10px;
       grid-template-columns: repeat(2, 1fr);
