--- a/tr/style.css
+++ b/tr/style.css
@@ -1,17 +1,17 @@
 
-  .t0sfxmenumobil {
+  .jfd8imenumobil {
     display: none;
     cursor: pointer;
   }
 
-  .t0sfxChildren {
+  .jfd8iChildren {
     display: flex;
     width: var(--max);
     gap: 15px;
     align-items: end;
   }
 
-  .t0sfx {
+  .jfd8i {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -20,7 +20,7 @@
     background-color: #e9e9e9;
   }
 
-  .t0sfxtitle {
+  .jfd8ititle {
     width: 100%;
     background-color: #333;
     display: flex;
@@ -28,7 +28,7 @@
     justify-content: center;
   }
 
-  .t0sfxtitlebody {
+  .jfd8ititlebody {
     color: #fff;
     width: var(--max);
     display: flex;
@@ -36,31 +36,31 @@
     padding: 10px 0px 10px 0px;
   }
 
-  .t0sfxtitlebodytitle {
+  .jfd8ititlebodytitle {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: left;
   }
 
-  .t0sfxtitlebodylang {
+  .jfd8ititlebodylang {
     width: auto;
     margin: -5px 0px -5px 0px;
   }
 
-  .t0sfxtitlebodylang ul {
+  .jfd8ititlebodylang ul {
     display: flex;
     gap: 5px;
   }
 
-  .t0sfxbody {
+  .jfd8ibody {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 5px 0px 5px 0px;
   }
 
-  .t0sfxmenulist {
+  .jfd8imenulist {
     display: block;
     background-color: #279c90;
     padding: 10px;
@@ -69,7 +69,7 @@
     width: 100%;
   }
 
-  .t0sfxmenubody {
+  .jfd8imenubody {
     width: 100%;
     background-color: #279c90;
     display: flex;
@@ -77,7 +77,7 @@
     justify-content: center;
   }
 
-  .t0sfxmenulist ul {
+  .jfd8imenulist ul {
     width: 100%;
     list-style-type: none;
     display: flex;
@@ -87,7 +87,7 @@
     overflow-x: auto;
   }
 
-  .t0sfxmenulist ul a {
+  .jfd8imenulist ul a {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -99,14 +99,14 @@
     white-space: nowrap;
   }
 
-  .t0sfxmenulist ul a:hover {
+  .jfd8imenulist ul a:hover {
     background-color: #e0e0e0;
     border-radius: 5px;
     color: #000;
     cursor: pointer;
   }
 
-  .t0sfxmenuitem {
+  .jfd8imenuitem {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -118,30 +118,30 @@
     white-space: nowrap;
   }
 
-  .t0sfxmenuactive {
+  .jfd8imenuactive {
     background-color: #e0e0e0 !important;
     border-radius: 5px;
     color: #000 !important;
     font-weight: bold;
   }
 
-  .t0sfxbodylogo {
+  .jfd8ibodylogo {
     height: 100px;
     max-width: 90vw;
   }
 
   @media screen and (min-width: 1024px) {
-    .t0sfxmenumobil {
+    .jfd8imenumobil {
       display: none !important;
     }
 
-    .t0sfxmenulist {
+    .jfd8imenulist {
       display: flex !important;
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .t0sfxmenumobil {
+    .jfd8imenumobil {
       display: flex;
       align-items: center;
       justify-content: end;
@@ -149,22 +149,22 @@
       width: 100%;
     }
 
-    .t0sfxmenumobil div {
+    .jfd8imenumobil div {
       font-size: 32px;
       color: #fff;
       padding: 5px;
     }
 
-    .t0sfxmenulist {
+    .jfd8imenulist {
       display: none;
     }
 
-    .t0sfxbody {
+    .jfd8ibody {
       flex-direction: column;
       gap: 20px;
     }
 
-    .t0sfxChildren {
+    .jfd8iChildren {
       width: 100%;
       gap: 0px;
       flex-direction: column;
@@ -172,19 +172,19 @@
       justify-content: center;
     }
 
-    .t0sfxmenulist ul a {
+    .jfd8imenulist ul a {
       padding: 10px 0px 10px 0px;
     }
 
-    .t0sfxmenu {
+    .jfd8imenu {
       overflow-x: auto;
     }
 
-    .t0sfxmenulist ul {
+    .jfd8imenulist ul {
       flex-direction: column;
     }
 
-    .t0sfxbodylogo {
+    .jfd8ibodylogo {
       max-height: 50vw;
       max-width: 50vw;
       max-height: 100px;
@@ -192,7 +192,7 @@
   }
 
   @media screen and (max-width: 768px) {
-    .t0sfxmenulist ul a {
+    .jfd8imenulist ul a {
       font-size: 14px;
     }
   }
@@ -247,18 +247,18 @@
   }
 
 
-  .cfhbr {
+  .v3tnm {
     width: 100%;
     margin: 15px 0;
   }
 
-  .cfhbrbody {
+  .v3tnmbody {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 15px;
   }
 
-  .cfhbrbodyitem {
+  .v3tnmbodyitem {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -269,7 +269,7 @@
     position: relative;
   }
 
-  .cfhbrbodyitemlink {
+  .v3tnmbodyitemlink {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -278,7 +278,7 @@
     gap: 10px;
   }
 
-  .cfhbrbodyitemimg {
+  .v3tnmbodyitemimg {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -289,18 +289,18 @@
     transition: all 0.3s ease;
   }
 
-  .cfhbrbodyitemimg:hover {
+  .v3tnmbodyitemimg:hover {
     box-shadow: 0 15px 35px rgba(0, 0, 0, 0.5);
     transform: translateY(-5px);
   }
 
-  .cfhbrbodyitemimg img {
+  .v3tnmbodyitemimg img {
     max-height: 200px;
     max-width: calc(200px * 2);
     border-radius: 10px;
   }
 
-  .cfhbrbodyitemtitle {
+  .v3tnmbodyitemtitle {
     padding: 5px;
     display: flex;
     height: calc(18px * 2);
@@ -311,7 +311,7 @@
     color: #fff;
   }
 
-  .cfhbrbodybg {
+  .v3tnmbodybg {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -322,7 +322,7 @@
     opacity: 0.5;
   }
 
-  .cfhbrbodyitems {
+  .v3tnmbodyitems {
     padding: 5px;
     display: flex;
     flex-direction: column;
@@ -333,25 +333,25 @@
     position: relative;
   }
 
-  .cfhbrbodyitems.left {
+  .v3tnmbodyitems.left {
     align-self: flex-start;
     border-radius: 0px 10px 10px 0px;
     transform: translateY(60px);
     animation: slideInLeft 1s forwards;
   }
 
-  .cfhbrbodyitems.right {
+  .v3tnmbodyitems.right {
     align-self: flex-end;
     border-radius: 10px 0px 0px 10px;
     transform: translateY(60px);
     animation: slideInRight 1s forwards;
   }
 
-  .cfhbrbodyitem.lefts {
+  .v3tnmbodyitem.lefts {
     align-self: flex-end;
   }
 
-  .cfhbrbodyitem.rights {
+  .v3tnmbodyitem.rights {
     align-self: flex-start;
   }
 
@@ -379,18 +379,18 @@
     }
   }
 
-  .cfhbrbodyitems {
+  .v3tnmbodyitems {
     animation-delay: 0.3s;
   }
 
  
 
   @media screen and (max-width: 1024px) {
-    .cfhbrbodyitem {
+    .v3tnmbodyitem {
       width: 100%;
     }
 
-    .cfhbrbody {
+    .v3tnmbody {
       display: flex;
       flex-direction: column;
       gap: 15px;
