--- a/tr/teleradyolojik-raporlama-hizmeti/style.css
+++ b/tr/teleradyolojik-raporlama-hizmeti/style.css
@@ -1,17 +1,17 @@
 
-  .zmx6vmenumobil {
+  .q9itgmenumobil {
     display: none;
     cursor: pointer;
   }
 
-  .zmx6vChildren {
+  .q9itgChildren {
     display: flex;
     width: var(--max);
     gap: 15px;
     align-items: end;
   }
 
-  .zmx6v {
+  .q9itg {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -20,7 +20,7 @@
     background-color: #e9e9e9;
   }
 
-  .zmx6vtitle {
+  .q9itgtitle {
     width: 100%;
     background-color: #333;
     display: flex;
@@ -28,7 +28,7 @@
     justify-content: center;
   }
 
-  .zmx6vtitlebody {
+  .q9itgtitlebody {
     color: #fff;
     width: var(--max);
     display: flex;
@@ -36,31 +36,31 @@
     padding: 10px 0px 10px 0px;
   }
 
-  .zmx6vtitlebodytitle {
+  .q9itgtitlebodytitle {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: left;
   }
 
-  .zmx6vtitlebodylang {
+  .q9itgtitlebodylang {
     width: auto;
     margin: -5px 0px -5px 0px;
   }
 
-  .zmx6vtitlebodylang ul {
+  .q9itgtitlebodylang ul {
     display: flex;
     gap: 5px;
   }
 
-  .zmx6vbody {
+  .q9itgbody {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 5px 0px 5px 0px;
   }
 
-  .zmx6vmenulist {
+  .q9itgmenulist {
     display: block;
     background-color: #279c90;
     padding: 10px;
@@ -69,7 +69,7 @@
     width: 100%;
   }
 
-  .zmx6vmenubody {
+  .q9itgmenubody {
     width: 100%;
     background-color: #279c90;
     display: flex;
@@ -77,7 +77,7 @@
     justify-content: center;
   }
 
-  .zmx6vmenulist ul {
+  .q9itgmenulist ul {
     width: 100%;
     list-style-type: none;
     display: flex;
@@ -87,7 +87,7 @@
     overflow-x: auto;
   }
 
-  .zmx6vmenulist ul a {
+  .q9itgmenulist ul a {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -99,14 +99,14 @@
     white-space: nowrap;
   }
 
-  .zmx6vmenulist ul a:hover {
+  .q9itgmenulist ul a:hover {
     background-color: #e0e0e0;
     border-radius: 5px;
     color: #000;
     cursor: pointer;
   }
 
-  .zmx6vmenuitem {
+  .q9itgmenuitem {
     padding: 8px;
     font-size: 16px;
     color: #fff;
@@ -118,30 +118,30 @@
     white-space: nowrap;
   }
 
-  .zmx6vmenuactive {
+  .q9itgmenuactive {
     background-color: #e0e0e0 !important;
     border-radius: 5px;
     color: #000 !important;
     font-weight: bold;
   }
 
-  .zmx6vbodylogo {
+  .q9itgbodylogo {
     height: 100px;
     max-width: 90vw;
   }
 
   @media screen and (min-width: 1024px) {
-    .zmx6vmenumobil {
+    .q9itgmenumobil {
       display: none !important;
     }
 
-    .zmx6vmenulist {
+    .q9itgmenulist {
       display: flex !important;
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .zmx6vmenumobil {
+    .q9itgmenumobil {
       display: flex;
       align-items: center;
       justify-content: end;
@@ -149,22 +149,22 @@
       width: 100%;
     }
 
-    .zmx6vmenumobil div {
+    .q9itgmenumobil div {
       font-size: 32px;
       color: #fff;
       padding: 5px;
     }
 
-    .zmx6vmenulist {
+    .q9itgmenulist {
       display: none;
     }
 
-    .zmx6vbody {
+    .q9itgbody {
       flex-direction: column;
       gap: 20px;
     }
 
-    .zmx6vChildren {
+    .q9itgChildren {
       width: 100%;
       gap: 0px;
       flex-direction: column;
@@ -172,19 +172,19 @@
       justify-content: center;
     }
 
-    .zmx6vmenulist ul a {
+    .q9itgmenulist ul a {
       padding: 10px 0px 10px 0px;
     }
 
-    .zmx6vmenu {
+    .q9itgmenu {
       overflow-x: auto;
     }
 
-    .zmx6vmenulist ul {
+    .q9itgmenulist ul {
       flex-direction: column;
     }
 
-    .zmx6vbodylogo {
+    .q9itgbodylogo {
       max-height: 50vw;
       max-width: 50vw;
       max-height: 100px;
@@ -192,7 +192,7 @@
   }
 
   @media screen and (max-width: 768px) {
-    .zmx6vmenulist ul a {
+    .q9itgmenulist ul a {
       font-size: 14px;
     }
   }
@@ -202,7 +202,7 @@
     justify-content: start;
   }
 
-  .jabs2 {
+  .nvdqp {
     width: var(--max);
     margin-top: 20px;
     gap: 10px;
@@ -210,7 +210,7 @@
     position: relative;
   }
 
-  .jabs2-menu-btn {
+  .nvdqp-menu-btn {
     display: none;
     background-color: #000;
     padding: 10px 20px;
@@ -222,11 +222,11 @@
     align-items: center;
   }
 
-  .jabs2-menu-btn i {
+  .nvdqp-menu-btn i {
     font-size: 20px;
   }
 
-  .jabs2-menu {
+  .nvdqp-menu {
     width: 200px;
     background-color: #f9f9f9;
     border-radius: 5px;
@@ -237,28 +237,28 @@
     float: left;
   }
 
-  .jabs2-desc {
+  .nvdqp-desc {
     display: flex;
     flex-direction: column;
     gap: 10px;
     float: right;
   }
 
-  .jabs2-menu > a {
+  .nvdqp-menu > a {
     background-color: #fff;
     padding: 10px;
     float: left;
     border-radius: 5px;
   }
 
-  .jabs2-menu > .active,
-  .jabs2-menu > a:hover {
+  .nvdqp-menu > .active,
+  .nvdqp-menu > a:hover {
     background-color: #000;
     color: #fff;
     display: flex;
   }
 
-  .jabs2-desc-menu {
+  .nvdqp-desc-menu {
     width: 200px;
     background-color: #000;
     display: flex;
@@ -266,19 +266,19 @@
     border-radius: 5px;
   }
 
-  .jabs2-desc-menu > div {
+  .nvdqp-desc-menu > div {
     padding: 5px;
     border-radius: 5px;
     background-color: #fff;
     margin: 5px;
   }
 
-  .jabs2-desc-body {
+  .nvdqp-desc-body {
     display: flex;
     justify-content: space-between;
   }
 
-  .jabs2-title {
+  .nvdqp-title {
     width: 100%;
     height: 150px;
     background-color: #000;
@@ -291,7 +291,7 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
 
-  .jabs2-title::before {
+  .nvdqp-title::before {
     content: "";
     position: absolute;
     top: 0;
@@ -306,44 +306,44 @@
     z-index: 1;
   }
 
-  .jabs2-title span {
+  .nvdqp-title span {
     position: relative;
     z-index: 2;
     font-size: 30px;
   }
 
-  .jabs2-body {
+  .nvdqp-body {
     display: flex;
     flex-direction: column;
     gap: 10px;
     text-align: left;
   }
 
-  .jabs2-img {
+  .nvdqp-img {
     display: flex;
     align-items: center;
     justify-content: center;
     width: calc(var(--max) - 460px);
   }
 
-  .jabs2-img img {
+  .nvdqp-img img {
     width: 100%;
   }
 
   @media screen and (min-width: 1024px) {
-    .jabs2-desc {
+    .nvdqp-desc {
       width: calc(var(--max) - 240px);
     }
   }
 
   @media screen and (max-width: 1024px) {
-    .jabs2-menu-btn {
+    .nvdqp-menu-btn {
       display: flex;
       width: calc(100% - 55px);
       margin-left: 5px;
     }
 
-    .jabs2 {
+    .nvdqp {
       display: flex;
       flex-direction: column;
       width: 100%;
@@ -352,17 +352,17 @@
       margin-top: 0px;
     }
 
-    .jabs2-img {
+    .nvdqp-img {
       width: 100%;
     }
 
-    .jabs2-body {
+    .nvdqp-body {
       width: 100%;
       order: 3;
       padding: 10px;
     }
 
-    .jabs2-menu {
+    .nvdqp-menu {
       width: 100%;
       float: none;
       flex-direction: column;
@@ -370,11 +370,11 @@
       display: none;
     }
 
-    .jabs2-menu.active {
+    .nvdqp-menu.active {
       display: flex;
     }
 
-    .jabs2-desc {
+    .nvdqp-desc {
       width: 100% !important;
       order: 2;
     }
